--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "إحصائيًا، تعتبر درجات الحرارة المنخفضة أكثر كفاءة في استخدام الطاقة، لذا قد ترغب في تجربة درجة حرارة أقل للمياه في المرة القادمة.",
     "add_appliance_connect_wifi_atos": "اتصل بشبكة \"ConnectLife\" في إعدادات Wi-Fi بهاتفك الذكي. \n \n اخرج من تطبيق ConnectLife وانتقل إلى إعدادات Wi-Fi بهاتفك الذكي. اتصل بشبكة \"ConnectLife\" ، واكتب كلمة المرور \"ConnectLife\" ثم عد إلى التطبيق.",
     "after_sale_report_failed_desc_new": "حدث خطأ غير متوقع ولم يتم الإبلاغ عن المشكلة.",
-    "CL_DV_RF_sf_remaining": "حاليًا في حالة تجميد شديد مع ** دقيقة متبقية."
+    "CL_DV_RF_sf_remaining": "حاليًا في حالة تجميد شديد مع ** دقيقة متبقية.",
+    "CL_SL_CM_library_title": "مكتبة الغسيل",
+    "CL_SL_CM_how_to_wash": "كيفية الغسل",
+    "CL_SL_CM_how_to_care": "كيفية العناية",
+    "CL_SL_CM_how_to_wash_detail": "تعليمك كيفية غسل أنواع مختلفة من الملابس مثل الحرير والصوف والجلد والسترات السفلية وما إلى ذلك.",
+    "CL_SL_CM_how_to_care_detail": "تعليمك كيفية العناية بأنواع الملابس المختلفة مثل الحرير والصوف والجلد والسترات السفلية وما إلى ذلك.",
+    "CL_SL_CM_articles": "المقالات",
+    "CL_SL_CM_assistant_title": "مساعد غسيل الملابس",
+    "CL_SL_CM_ai_wash_dry": "غسيل وتجفيف بالذكاء الاصطناعي",
+    "CL_SL_CM_drum_cleaning_subtitle": "بعد غسلات عديدة، يرجى التفكير في تنظيف الأسطوانة لتحسين نتائج الغسيل.",
+    "CL_SL_CM_recommended_about": "حول الموصى بها",
+    "CL_SL_CM_recommended_about_detail": "تعتمد هذه البرامج على عاداتك اليومية واستبياناتك.",
+    "CL_SL_CM_redo_the_questionnaire": "أعد الاستبيان",
+    "CL_SL_CM_laundry_title": "مغسلة",
+    "CL_SL_CM_laundry_services_title": "خدمات غسيل الملابس الشخصية",
+    "CL_SL_CM_laundry_services_detail": "مرحبًا بك! أجب عن الأسئلة التالية لمساعدتنا في التوصية ببرامج غسيل أفضل، مما يعزز تجربة الغسيل الشاملة الخاصة بك.",
+    "CL_SL_CM_recommended_program_guide": "دليل البرنامج الموصى به",
+    "CL_SL_CM_let's_get_started": "دعونا نبدأ!",
+    "CL_SL_CM_thank_you": "شكرًا لك!",
+    "CL_SL_CM_questionnaire_congratulations": "مبروك عليك إكمال الاستبيان، وسنوصي لك ببرنامج الغسيل المناسب بناءً على الاستبيان، يرجى التحقق من \"الموصى به\".",
+    "CL_DV_OV_light_setting_desc": "قم بتشغيل أضواء الفرن أو إيقاف تشغيلها. يمكنك تغيير اللون ومدة الإضاءة في قائمة إعدادات الإضاءة.",
+    "CL_DV_OV_lock_setting_desc": "باستخدام القفل، يمكنك تعطيل شاشة اللمس.",
+    "CL_DV_OV_eco_setting_desc": "يساعد في تقليل استهلاك الطاقة وتوفير الكهرباء.",
+    "CL_DV_OV_night_mode_setting_desc": "قلل سطوع الشاشة و/أو الإضاءة خلال ساعات الليل المجدولة.",
+    "CL_DV_OV_door_lock_setting_desc": "سيؤدي تشغيل قفل الباب إلى قفل باب الفرن الخاص بك.",
+    "CL_CF_FM_one_day_left": "1 يوم متبقي",
+    "CL_CF_FM_x_item_selected": "*** تم اختيار العنصر"
 }
