--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "По-ниските температури са статистически по-енергийно ефективни, така че може да опитате с по-ниска температура на водата следващия път.",
     "add_appliance_connect_wifi_atos": "Свържете се с мрежата „ConnectLife“ в Wi-Fi настройките на вашия смартфон.\n\nИзлезте от приложението ConnectLife и отидете до Wi-Fi настройките на вашия смартфон. Свържете се с мрежата „ConnectLife“, въведете паролата „ConnectLife“ и се върнете към приложението.",
     "after_sale_report_failed_desc_new": "Възникна неочаквана грешка и проблемът не можа да бъде докладван.",
-    "CL_DV_RF_sf_remaining": "В момента в режим на супер замразяване с оставащи ** минути."
+    "CL_DV_RF_sf_remaining": "В момента в режим на супер замразяване с оставащи ** минути.",
+    "CL_SL_CM_library_title": "Библиотека за пране",
+    "CL_SL_CM_how_to_wash": "Как да се измие",
+    "CL_SL_CM_how_to_care": "Как да се грижим",
+    "CL_SL_CM_how_to_wash_detail": "Научи ви как да перете различни видове дрехи като коприна, вълна, кожа, пухени якета и др.",
+    "CL_SL_CM_how_to_care_detail": "Научи ви как да се грижите за различни видове дрехи като коприна, вълна, кожа, пухени якета и др.",
+    "CL_SL_CM_articles": "статии",
+    "CL_SL_CM_assistant_title": "Помощник пералня",
+    "CL_SL_CM_ai_wash_dry": "AI Wash & Dry",
+    "CL_SL_CM_drum_cleaning_subtitle": "След много пранета, моля, помислете за почистване на барабана, за да подобрите резултатите от прането.",
+    "CL_SL_CM_recommended_about": "Относно препоръчително",
+    "CL_SL_CM_recommended_about_detail": "Тези програми се основават на вашите ежедневни навици и въпросници.",
+    "CL_SL_CM_redo_the_questionnaire": "ПЪРВИ ВЪПРОСНИКА",
+    "CL_SL_CM_laundry_title": "Пералня",
+    "CL_SL_CM_laundry_services_title": "Персонализирани перални услуги",
+    "CL_SL_CM_laundry_services_detail": "Добре дошли! Отговорете на следните въпроси, за да ни помогнете да препоръчаме по-добри програми за пране, подобрявайки цялостното ви изживяване с прането.",
+    "CL_SL_CM_recommended_program_guide": "Препоръчайте програмно ръководство",
+    "CL_SL_CM_let's_get_started": "Да започваме!",
+    "CL_SL_CM_thank_you": "Благодаря ви!",
+    "CL_SL_CM_questionnaire_congratulations": "Поздравления за попълването на въпросника, ние ще ви препоръчаме подходящата програма за пране въз основа на въпросника, моля, проверете в „Препоръчани“.",
+    "CL_DV_OV_light_setting_desc": "Включете или изключете светлините във фурната. Можете да промените цвета и продължителността в менюто за настройки на светлината.",
+    "CL_DV_OV_lock_setting_desc": "С ключалката деактивирате сензорния екран.",
+    "CL_DV_OV_eco_setting_desc": "Помага за намаляване на енергийната консумация и спестяване на електричество.",
+    "CL_DV_OV_night_mode_setting_desc": "Намалете яркостта на екрана и/или светлината по време на планираните нощни часове.",
+    "CL_DV_OV_door_lock_setting_desc": "Включването на заключването на вратата ще заключи вратата на вашата фурна.",
+    "CL_CF_FM_one_day_left": "остава 1 ден",
+    "CL_CF_FM_x_item_selected": "*** избран артикул"
 }
