--- a/language/i18n_cs.json
+++ b/language/i18n_cs.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "Nižší teploty jsou statisticky energeticky účinnější, takže příště možná budete chtít zkusit nižší teplotu vody.",
     "add_appliance_connect_wifi_atos": "Připojte se k síti „ConnectLife“ v nastavení Wi-Fi svého smartphonu.\n\nUkončete aplikaci ConnectLife a přejděte do nastavení Wi-Fi smartphonu. Připojte se k síti „ConnectLife“, zadejte heslo „ConnectLife“ a vraťte se do aplikace.",
     "after_sale_report_failed_desc_new": "Došlo k neočekávané chybě a problém nelze nahlásit.",
-    "CL_DV_RF_sf_remaining": "Aktuálně super zmrazení, zbývá ** min."
+    "CL_DV_RF_sf_remaining": "Aktuálně super zmrazení, zbývá ** min.",
+    "CL_SL_CM_library_title": "Knihovna prádla",
+    "CL_SL_CM_how_to_wash": "Jak se umýt",
+    "CL_SL_CM_how_to_care": "Jak se starat",
+    "CL_SL_CM_how_to_wash_detail": "Naučí vás prát různé druhy oblečení, jako je hedvábí, vlna, kůže a péřové bundy atd.",
+    "CL_SL_CM_how_to_care_detail": "Naučí vás, jak pečovat o různé druhy oblečení, jako je hedvábí, vlna, kůže, péřové bundy atd.",
+    "CL_SL_CM_articles": "články",
+    "CL_SL_CM_assistant_title": "Pomocník v prádelně",
+    "CL_SL_CM_ai_wash_dry": "AI Wash & Dry",
+    "CL_SL_CM_drum_cleaning_subtitle": "Po mnoha praních zvažte čištění bubnu, abyste zlepšili výsledky praní.",
+    "CL_SL_CM_recommended_about": "O doporučeně",
+    "CL_SL_CM_recommended_about_detail": "Tyto programy jsou založeny na vašich každodenních zvycích a dotaznících.",
+    "CL_SL_CM_redo_the_questionnaire": "Zopakujte si DOTAZNÍK",
+    "CL_SL_CM_laundry_title": "Prádelna",
+    "CL_SL_CM_laundry_services_title": "Personalizované služby prádelny",
+    "CL_SL_CM_laundry_services_detail": "Vítejte! Odpovězte na následující otázky, které nám pomohou doporučit lepší programy praní a zlepšit tak váš celkový zážitek z praní.",
+    "CL_SL_CM_recommended_program_guide": "Doporučit průvodce programem",
+    "CL_SL_CM_let's_get_started": "Začněme!",
+    "CL_SL_CM_thank_you": "Děkuju!",
+    "CL_SL_CM_questionnaire_congratulations": "Gratulujeme k vyplnění dotazníku, na základě dotazníku Vám doporučíme vhodný prací program, zaškrtněte prosím \"Doporučeno\".",
+    "CL_DV_OV_light_setting_desc": "Zapněte nebo vypněte osvětlení trouby. Barvu a dobu trvání můžete změnit v nabídce nastavení světla.",
+    "CL_DV_OV_lock_setting_desc": "Pomocí zámku deaktivujete dotykovou obrazovku.",
+    "CL_DV_OV_eco_setting_desc": "Pomáhá snižovat spotřebu energie a šetřit elektřinu.",
+    "CL_DV_OV_night_mode_setting_desc": "Snížit jas obrazovky a/nebo světlo během plánovaných nočních hodin.",
+    "CL_DV_OV_door_lock_setting_desc": "Zapnutím zámku dvířek uzamknete dvířka vaší trouby.",
+    "CL_CF_FM_one_day_left": "Zbývá 1 den",
+    "CL_CF_FM_x_item_selected": "*** vybrána položka"
 }
