--- a/language/i18n_da.json
+++ b/language/i18n_da.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "Lavere temperaturer er statistisk mere energieffektive, så du kan prøve en lavere vandtemperatur næste gang.",
     "add_appliance_connect_wifi_atos": "Opret forbindelse til \"ConnectLife\"-netværket i Wi-Fi-indstillingerne på din smartphone.\n\nAfslut ConnectLife-appen, og gå til din smartphones Wi-Fi-indstillinger. Opret forbindelse til \"ConnectLife\"-netværket, indtast adgangskoden \"ConnectLife\" og vend tilbage til appen.",
     "after_sale_report_failed_desc_new": "Der opstod en uventet fejl, og problemet kunne ikke rapporteres.",
-    "CL_DV_RF_sf_remaining": "Lige nu i superfrysning med ** min tilbage."
+    "CL_DV_RF_sf_remaining": "Lige nu i superfrysning med ** min tilbage.",
+    "CL_SL_CM_library_title": "Vaskeri bibliotek",
+    "CL_SL_CM_how_to_wash": "Sådan vaskes",
+    "CL_SL_CM_how_to_care": "Hvordan man plejer",
+    "CL_SL_CM_how_to_wash_detail": "Lær dig at vaske forskellige typer tøj såsom silke, uld, læder og dunjakker osv.",
+    "CL_SL_CM_how_to_care_detail": "Lær dig, hvordan du plejer forskellige typer tøj såsom silke, uld, læder og dunjakker osv.",
+    "CL_SL_CM_articles": "artikler",
+    "CL_SL_CM_assistant_title": "Vaskeassistent",
+    "CL_SL_CM_ai_wash_dry": "AI vask og tør",
+    "CL_SL_CM_drum_cleaning_subtitle": "Efter mange vaske skal du overveje tromlerengøring for at forbedre vaskeresultaterne.",
+    "CL_SL_CM_recommended_about": "Om anbefalet",
+    "CL_SL_CM_recommended_about_detail": "Disse programmer er baseret på dine daglige vaner og spørgeskemaer.",
+    "CL_SL_CM_redo_the_questionnaire": "GENTAG SPØRGESKEMAET",
+    "CL_SL_CM_laundry_title": "Vasketøj",
+    "CL_SL_CM_laundry_services_title": "Personlig vaskeservice",
+    "CL_SL_CM_laundry_services_detail": "Velkomst! Besvar følgende spørgsmål for at hjælpe os med at anbefale bedre vaskeprogrammer, hvilket forbedrer din overordnede vaskeoplevelse.",
+    "CL_SL_CM_recommended_program_guide": "Anbefal programguide",
+    "CL_SL_CM_let's_get_started": "Lad os komme i gang!",
+    "CL_SL_CM_thank_you": "Tak!",
+    "CL_SL_CM_questionnaire_congratulations": "Tillykke med at have udfyldt spørgeskemaet, vi vil anbefale dig det passende vaskeprogram baseret på spørgeskemaet, tjek venligst i \"Anbefalet\".",
+    "CL_DV_OV_light_setting_desc": "Tænd eller sluk dine ovnlys. Du kan ændre farve og varighed i lysindstillingsmenuen.",
+    "CL_DV_OV_lock_setting_desc": "Med låsen deaktiverer du berøringsskærmen.",
+    "CL_DV_OV_eco_setting_desc": "Hjælper med at reducere energiforbruget og spare elektricitet.",
+    "CL_DV_OV_night_mode_setting_desc": "Reducer skærmens lysstyrke og/eller lyset i planlagte natte timer.",
+    "CL_DV_OV_door_lock_setting_desc": "Hvis du tænder dørlåsen, låses døren til din ovn.",
+    "CL_CF_FM_one_day_left": "1 dag tilbage",
+    "CL_CF_FM_x_item_selected": "*** element valgt"
 }
