--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "Οι χαμηλότερες θερμοκρασίες είναι στατιστικά πιο ενεργειακά αποδοτικές, επομένως μπορεί να θέλετε να δοκιμάσετε χαμηλότερη θερμοκρασία νερού την επόμενη φορά.",
     "add_appliance_connect_wifi_atos": "Συνδεθείτε στο δίκτυο \"ConnectLife\" στις ρυθμίσεις Wi-Fi του smartphone σας.\n\nΈξοδος από την εφαρμογή ConnectLife και μεταβείτε στις ρυθμίσεις Wi-Fi του smartphone σας. Συνδεθείτε στο δίκτυο \"ConnectLife\", πληκτρολογήστε τον κωδικό πρόσβασης \"ConnectLife\" και επιστρέψτε στην εφαρμογή.",
     "after_sale_report_failed_desc_new": "Παρουσιάστηκε απροσδόκητο σφάλμα και δεν ήταν δυνατή η αναφορά του ζητήματος.",
-    "CL_DV_RF_sf_remaining": "Αυτήν τη στιγμή βρίσκεται σε υπερκατάψυξη με ** λεπτά."
+    "CL_DV_RF_sf_remaining": "Αυτήν τη στιγμή βρίσκεται σε υπερκατάψυξη με ** λεπτά.",
+    "CL_SL_CM_library_title": "Βιβλιοθήκη πλυντηρίου",
+    "CL_SL_CM_how_to_wash": "Πώς να πλένετε",
+    "CL_SL_CM_how_to_care": "Πώς να νοιάζεσαι",
+    "CL_SL_CM_how_to_wash_detail": "Σας μαθαίνει πώς να πλένετε διαφορετικούς τύπους ρούχων όπως μεταξωτά, μάλλινα, δερμάτινα και πουπουλένια μπουφάν κ.λπ.",
+    "CL_SL_CM_how_to_care_detail": "Σας μαθαίνει πώς να φροντίζετε διαφορετικούς τύπους ρούχων όπως μεταξωτά, μάλλινα, δερμάτινα και πουπουλένια μπουφάν κ.λπ.",
+    "CL_SL_CM_articles": "άρθρα",
+    "CL_SL_CM_assistant_title": "Βοηθός πλυντηρίου",
+    "CL_SL_CM_ai_wash_dry": "AI Wash & Dry",
+    "CL_SL_CM_drum_cleaning_subtitle": "Μετά από πολλές πλύσεις, σκεφτείτε τον καθαρισμό του τυμπάνου για να βελτιώσετε τα αποτελέσματα πλύσης.",
+    "CL_SL_CM_recommended_about": "Σχετικά με το προτεινόμενο",
+    "CL_SL_CM_recommended_about_detail": "Αυτά τα προγράμματα βασίζονται στις καθημερινές σας συνήθειες και ερωτηματολόγια.",
+    "CL_SL_CM_redo_the_questionnaire": "ΕΠΑΝΑΛΑΒΕ ΤΟ ΕΡΩΤΗΜΑΤΟΛΟΓΙΟ",
+    "CL_SL_CM_laundry_title": "Πλυντήριο",
+    "CL_SL_CM_laundry_services_title": "Εξατομικευμένες υπηρεσίες πλυντηρίου",
+    "CL_SL_CM_laundry_services_detail": "Καλωσόρισμα! Απαντήστε στις παρακάτω ερωτήσεις για να μας βοηθήσετε να προτείνουμε καλύτερα προγράμματα πλύσης, βελτιώνοντας τη συνολική εμπειρία πλύσης ρούχων.",
+    "CL_SL_CM_recommended_program_guide": "Προτείνετε οδηγό προγράμματος",
+    "CL_SL_CM_let's_get_started": "Ας ξεκινήσουμε!",
+    "CL_SL_CM_thank_you": "Σας ευχαριστώ!",
+    "CL_SL_CM_questionnaire_congratulations": "Συγχαρητήρια για τη συμπλήρωση του ερωτηματολογίου, θα σας προτείνουμε το κατάλληλο πρόγραμμα πλυντηρίου με βάση το ερωτηματολόγιο, ελέγξτε στο \"Συνιστάται\".",
+    "CL_DV_OV_light_setting_desc": "Ανάψτε ή σβήστε τα φώτα του φούρνου σας. Μπορείτε να αλλάξετε το χρώμα και τη διάρκεια στο μενού ρυθμίσεων φωτός.",
+    "CL_DV_OV_lock_setting_desc": "Με το κλείδωμα, απενεργοποιείτε την οθόνη αφής.",
+    "CL_DV_OV_eco_setting_desc": "Βοηθά στη μείωση της κατανάλωσης ενέργειας και στην εξοικονόμηση ηλεκτρικού ρεύματος.",
+    "CL_DV_OV_night_mode_setting_desc": "Μειώστε τη φωτεινότητα της οθόνης και/ή του φωτισμού κατά τις προγραμματισμένες ώρες νυκτός.",
+    "CL_DV_OV_door_lock_setting_desc": "Η ενεργοποίηση της κλειδαριάς της πόρτας θα κλειδώσει την πόρτα του φούρνου σας.",
+    "CL_CF_FM_one_day_left": "1 ημέρα έμεινε",
+    "CL_CF_FM_x_item_selected": "*** επιλεγμένο στοιχείο"
 }
