--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "Lower temperatures are statistically more energy efficient, so you may want to try a lower water temperature next time.",
     "add_appliance_connect_wifi_atos": "Connect to “ConnectLife” network in the Wi-Fi settings of your smartphone.\n\nExit ConnectLife app, go to your smartphone’s WiFi settings. Connect to “ConnectLife” network type in password “ConnectLife” and return back to ConnectLife app.",
     "after_sale_report_failed_desc_new": "An unexpected error occured and the issue could not be reported.",
-    "CL_DV_RF_sf_remaining": "Currently in super freeze with ** min remaining."
+    "CL_DV_RF_sf_remaining": "Currently in super freeze with ** min remaining.",
+    "CL_SL_CM_library_title": "Laundry library",
+    "CL_SL_CM_how_to_wash": "How to wash",
+    "CL_SL_CM_how_to_care": "How to care",
+    "CL_SL_CM_how_to_wash_detail": "Teach you how to Wash different types of clothing such as silk, wool, leather, and down jackets, etc.",
+    "CL_SL_CM_how_to_care_detail": "Teach you how to care for different types of clothing such as silk, wool, leather, and down jackets, etc.",
+    "CL_SL_CM_articles": "articles",
+    "CL_SL_CM_assistant_title": "Laundry assistant",
+    "CL_SL_CM_ai_wash_dry": "AI Wash & Dry",
+    "CL_SL_CM_drum_cleaning_subtitle": "After many washes, please consider drum cleaning to enhance laundry results.",
+    "CL_SL_CM_recommended_about": "About recommended",
+    "CL_SL_CM_recommended_about_detail": "These programs are based on your daily habits and questionnaires.",
+    "CL_SL_CM_redo_the_questionnaire": "REDO THE QUESTIONNAIRE",
+    "CL_SL_CM_laundry_title": "Laundry",
+    "CL_SL_CM_laundry_services_title": "Personalized laundry services",
+    "CL_SL_CM_laundry_services_detail": "Welcome! Answer the following questions to assist us in recommending better laundry programs, enhancing your overall laundry experience.",
+    "CL_SL_CM_recommended_program_guide": "Recommend program guide",
+    "CL_SL_CM_let's_get_started": "Let's get started!",
+    "CL_SL_CM_thank_you": "Thank You!",
+    "CL_SL_CM_questionnaire_congratulations": "Congratulations on completing the questionnaire, we will recommend you the appropriate laundry program based on the questionnaire, please check in the \"Recommended”.",
+    "CL_DV_OV_light_setting_desc": "Turn your oven lights ON or OFF. You can change the color and duration in the light settings menu.",
+    "CL_DV_OV_lock_setting_desc": "With the lock, you disable the touch screen.",
+    "CL_DV_OV_eco_setting_desc": "Helps reduce energy consumption and saves electricity.",
+    "CL_DV_OV_night_mode_setting_desc": "Reduce the brightness of the screen and/or light during scheduled nighttime hours.",
+    "CL_DV_OV_door_lock_setting_desc": "Turning on door lock will lock the door of your oven.",
+    "CL_CF_FM_one_day_left": "1 day left",
+    "CL_CF_FM_x_item_selected": "*** item selected"
 }
