--- a/language/i18n_es.json
+++ b/language/i18n_es.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "Las temperaturas más bajas son estadísticamente más eficientes energéticamente, por lo que es posible que la próxima vez quieras probar con una temperatura de agua más baja.",
     "add_appliance_connect_wifi_atos": "Conéctese a la red \"ConnectLife\" en la configuración Wi-Fi de su teléfono inteligente.\n\nSalga de la aplicación ConnectLife y vaya a la configuración Wi-Fi de su teléfono inteligente. Conéctese a la red \"ConnectLife\", escriba la contraseña \"ConnectLife\" y regrese a la aplicación.",
     "after_sale_report_failed_desc_new": "Ocurrió un error inesperado y no se pudo informar el problema.",
-    "CL_DV_RF_sf_remaining": "Actualmente en súper congelamiento con ** min restante."
+    "CL_DV_RF_sf_remaining": "Actualmente en súper congelamiento con ** min restante.",
+    "CL_SL_CM_library_title": "Biblioteca de lavandería",
+    "CL_SL_CM_how_to_wash": "Cómo lavar",
+    "CL_SL_CM_how_to_care": "Cómo cuidar",
+    "CL_SL_CM_how_to_wash_detail": "Te enseñaré cómo lavar diferentes tipos de prendas como seda, lana, cuero, chaquetas de plumas, etc.",
+    "CL_SL_CM_how_to_care_detail": "Te enseñaremos a cuidar diferentes tipos de prendas como seda, lana, cuero, chaquetas de plumas, etc.",
+    "CL_SL_CM_articles": "artículos",
+    "CL_SL_CM_assistant_title": "Asistente de lavandería",
+    "CL_SL_CM_ai_wash_dry": "Lavado y secado con IA",
+    "CL_SL_CM_drum_cleaning_subtitle": "Después de muchos lavados, considere limpiar el tambor para mejorar los resultados del lavado.",
+    "CL_SL_CM_recommended_about": "Acerca de recomendado",
+    "CL_SL_CM_recommended_about_detail": "Estos programas se basan en tus hábitos diarios y cuestionarios.",
+    "CL_SL_CM_redo_the_questionnaire": "REHACER EL CUESTIONARIO",
+    "CL_SL_CM_laundry_title": "Lavadero",
+    "CL_SL_CM_laundry_services_title": "Servicios de lavandería personalizados",
+    "CL_SL_CM_laundry_services_detail": "¡Bienvenido! Responda las siguientes preguntas para ayudarnos a recomendar mejores programas de lavado y mejorar su experiencia de lavado en general.",
+    "CL_SL_CM_recommended_program_guide": "Recomendar guía de programas",
+    "CL_SL_CM_let's_get_started": "¡Empecemos!",
+    "CL_SL_CM_thank_you": "¡Gracias!",
+    "CL_SL_CM_questionnaire_congratulations": "Enhorabuena por completar el cuestionario, le recomendaremos el programa de lavado adecuado en función del cuestionario, por favor marque en \"Recomendados\".",
+    "CL_DV_OV_light_setting_desc": "Enciende o apaga las luces del horno. Puedes cambiar el color y la duración en el menú de configuración de las luces.",
+    "CL_DV_OV_lock_setting_desc": "Con el bloqueo se desactiva la pantalla táctil.",
+    "CL_DV_OV_eco_setting_desc": "Ayuda a reducir el consumo de energía y ahorrar electricidad.",
+    "CL_DV_OV_night_mode_setting_desc": "Reduzca el brillo de la pantalla y/o la luz durante las horas programadas de la noche.",
+    "CL_DV_OV_door_lock_setting_desc": "Al activar el bloqueo de la puerta, se bloqueará la puerta de su horno.",
+    "CL_CF_FM_one_day_left": "1 día restante",
+    "CL_CF_FM_x_item_selected": "*** artículo seleccionado"
 }
