--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "دماهای پایین تر از نظر آماری بازده انرژی بیشتری دارند، بنابراین ممکن است بخواهید دفعه بعد دمای آب کمتری را امتحان کنید.",
     "add_appliance_connect_wifi_atos": "در تنظیمات Wi-Fi تلفن هوشمند خود به شبکه «ConnectLife» وصل شوید.\n\nاز برنامه ConnectLife خارج شوید و به تنظیمات Wi-Fi تلفن هوشمند خود بروید. به شبکه «ConnectLife» وصل شوید، گذرواژه «ConnectLife» را تایپ کنید و به برنامه برگردید.",
     "after_sale_report_failed_desc_new": "یک خطای غیرمنتظره روی داد و مشکل گزارش نشد.",
-    "CL_DV_RF_sf_remaining": "در حال حاضر در حالت انجماد فوق العاده با ** دقیقه باقی مانده است."
+    "CL_DV_RF_sf_remaining": "در حال حاضر در حالت انجماد فوق العاده با ** دقیقه باقی مانده است.",
+    "CL_SL_CM_library_title": "کتابخانه خشکشویی",
+    "CL_SL_CM_how_to_wash": "نحوه شستشو",
+    "CL_SL_CM_how_to_care": "چگونه مراقبت کنیم",
+    "CL_SL_CM_how_to_wash_detail": "نحوه شستن انواع لباس ها مانند کت های ابریشمی، پشمی، چرمی، و غیره را به شما آموزش می دهد.",
+    "CL_SL_CM_how_to_care_detail": "به شما یاد می دهد که چگونه از انواع لباس ها مانند کت های ابریشمی، پشمی، چرمی، و غیره مراقبت کنید.",
+    "CL_SL_CM_articles": "مقالات",
+    "CL_SL_CM_assistant_title": "دستیار لباسشویی",
+    "CL_SL_CM_ai_wash_dry": "AI Wash & Dry",
+    "CL_SL_CM_drum_cleaning_subtitle": "پس از شستشوی زیاد، لطفاً برای بهبود نتایج شستشو، تمیز کردن درام را در نظر بگیرید.",
+    "CL_SL_CM_recommended_about": "درباره توصیه می شود",
+    "CL_SL_CM_recommended_about_detail": "این برنامه ها بر اساس عادات روزانه و پرسشنامه های شما هستند.",
+    "CL_SL_CM_redo_the_questionnaire": "دوباره پرسشنامه را انجام دهید",
+    "CL_SL_CM_laundry_title": "لباسشویی",
+    "CL_SL_CM_laundry_services_title": "خدمات خشکشویی شخصی",
+    "CL_SL_CM_laundry_services_detail": "خوش آمدید! به سؤالات زیر پاسخ دهید تا به ما در توصیه برنامه های لباسشویی بهتر کمک کنید و تجربه کلی شما را در شستشوی لباس افزایش دهید.",
+    "CL_SL_CM_recommended_program_guide": "راهنمای برنامه را توصیه کنید",
+    "CL_SL_CM_let's_get_started": "بیایید شروع کنیم!",
+    "CL_SL_CM_thank_you": "متشکرم",
+    "CL_SL_CM_questionnaire_congratulations": "بابت تکمیل پرسشنامه تبریک می گوییم، ما برنامه شستشوی مناسب را بر اساس پرسشنامه به شما توصیه می کنیم، لطفاً در \"توصیه شده\" بررسی کنید.",
+    "CL_DV_OV_light_setting_desc": "چراغ های فر خود را روشن یا خاموش کنید. می توانید رنگ و مدت زمان را در منوی تنظیمات نور تغییر دهید.",
+    "CL_DV_OV_lock_setting_desc": "با قفل، صفحه لمسی را غیرفعال می کنید.",
+    "CL_DV_OV_eco_setting_desc": "به کاهش مصرف انرژی و صرفه جویی در برق کمک می کند.",
+    "CL_DV_OV_night_mode_setting_desc": "در ساعات شبانه روز برنامه ریزی شده، روشنایی صفحه نمایش و/یا نور را کاهش دهید.",
+    "CL_DV_OV_door_lock_setting_desc": "روشن کردن قفل در، درب فر شما را قفل می کند.",
+    "CL_CF_FM_one_day_left": "1 روز مانده",
+    "CL_CF_FM_x_item_selected": "*** مورد انتخاب شد"
 }
