--- a/language/i18n_fi.json
+++ b/language/i18n_fi.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "Matalammat lämpötilat ovat tilastollisesti energiatehokkaampia, joten sinun kannattaa kokeilla alhaisempaa veden lämpötilaa ensi kerralla.",
     "add_appliance_connect_wifi_atos": "Yhdistä \"ConnectLife\"-verkkoon älypuhelimesi Wi-Fi-asetuksissa.\n\nPoistu ConnectLife-sovelluksesta ja siirry älypuhelimesi Wi-Fi-asetuksiin. Yhdistä \"ConnectLife\"-verkkoon, kirjoita salasana \"ConnectLife\" ja palaa sovellukseen.",
     "after_sale_report_failed_desc_new": "Tapahtui odottamaton virhe, eikä ongelmaa voitu ilmoittaa.",
-    "CL_DV_RF_sf_remaining": "Tällä hetkellä superjäädytettynä, ** min jäljellä."
+    "CL_DV_RF_sf_remaining": "Tällä hetkellä superjäädytettynä, ** min jäljellä.",
+    "CL_SL_CM_library_title": "Pesulakirjasto",
+    "CL_SL_CM_how_to_wash": "Kuinka pestä",
+    "CL_SL_CM_how_to_care": "Kuinka huolehtia",
+    "CL_SL_CM_how_to_wash_detail": "Opettele pesemään erilaisia ​​vaatteita, kuten silkkiä, villaa, nahkaa, untuvatakkeja jne.",
+    "CL_SL_CM_how_to_care_detail": "Opettele sinua hoitamaan erilaisia ​​vaatteita, kuten silkkiä, villaa, nahkaa ja untuvatakkeja jne.",
+    "CL_SL_CM_articles": "artikkeleita",
+    "CL_SL_CM_assistant_title": "Pesula-assistentti",
+    "CL_SL_CM_ai_wash_dry": "AI Wash & Dry",
+    "CL_SL_CM_drum_cleaning_subtitle": "Harkitse rummun puhdistusta useiden pesujen jälkeen parantaaksesi pesutuloksia.",
+    "CL_SL_CM_recommended_about": "Suunnilleen suositeltu",
+    "CL_SL_CM_recommended_about_detail": "Nämä ohjelmat perustuvat päivittäisiin tottumuksiin ja kyselyihin.",
+    "CL_SL_CM_redo_the_questionnaire": "TEE KYSELYLOMAKE UUDELLEEN",
+    "CL_SL_CM_laundry_title": "Pesula",
+    "CL_SL_CM_laundry_services_title": "Henkilökohtaiset pesulapalvelut",
+    "CL_SL_CM_laundry_services_detail": "Tervetuloa! Vastaa seuraaviin kysymyksiin auttaaksesi meitä suosittelemaan parempia pesuohjelmia ja parantamaan yleistä pyykinpesukokemustasi.",
+    "CL_SL_CM_recommended_program_guide": "Suosittele ohjelmaopasta",
+    "CL_SL_CM_let's_get_started": "Aloitetaan!",
+    "CL_SL_CM_thank_you": "Kiitos!",
+    "CL_SL_CM_questionnaire_congratulations": "Onnittelut kyselyn täyttämisestä, suosittelemme sinulle sopivaa pesuohjelmaa kyselylomakkeen perusteella, tarkista \"Suositus\" -kohdasta.",
+    "CL_DV_OV_light_setting_desc": "Kytke uunin valot päälle tai pois päältä. Voit muuttaa väriä ja kestoa valoasetusvalikossa.",
+    "CL_DV_OV_lock_setting_desc": "Lukolla poistat kosketusnäytön käytöstä.",
+    "CL_DV_OV_eco_setting_desc": "Auttaa vähentämään energiankulutusta ja säästämään sähköä.",
+    "CL_DV_OV_night_mode_setting_desc": "Vähennä näytön kirkkautta ja/tai valoa aikataulutettuina yöaikoina.",
+    "CL_DV_OV_door_lock_setting_desc": "Oven lukon kytkeminen päälle lukitsee uunin luukun.",
+    "CL_CF_FM_one_day_left": "1 päivä jäljellä",
+    "CL_CF_FM_x_item_selected": "*** kohde valittu"
 }
