--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "Les températures plus basses sont statistiquement plus économes en énergie, vous pouvez donc essayer une température d'eau plus basse la prochaine fois.",
     "add_appliance_connect_wifi_atos": "Connectez-vous au réseau \"ConnectLife\" dans les paramètres Wi-Fi de votre smartphone.\n\nQuittez l'application ConnectLife et accédez aux paramètres Wi-Fi de votre smartphone. Connectez-vous au réseau « ConnectLife », saisissez le mot de passe « ConnectLife » et revenez à l'application.",
     "after_sale_report_failed_desc_new": "Une erreur inattendue s'est produite et le problème n'a pas pu être signalé.",
-    "CL_DV_RF_sf_remaining": "Actuellement en super congélation avec ** min restant."
+    "CL_DV_RF_sf_remaining": "Actuellement en super congélation avec ** min restant.",
+    "CL_SL_CM_library_title": "Bibliothèque de blanchisserie",
+    "CL_SL_CM_how_to_wash": "Comment se laver",
+    "CL_SL_CM_how_to_care": "Comment prendre soin",
+    "CL_SL_CM_how_to_wash_detail": "Je vous apprends à laver différents types de vêtements tels que la soie, la laine, le cuir, les doudounes, etc.",
+    "CL_SL_CM_how_to_care_detail": "Je vous apprends à prendre soin de différents types de vêtements tels que la soie, la laine, le cuir, les doudounes, etc.",
+    "CL_SL_CM_articles": "articles",
+    "CL_SL_CM_assistant_title": "Assistante de blanchisserie",
+    "CL_SL_CM_ai_wash_dry": "Lavage et séchage par IA",
+    "CL_SL_CM_drum_cleaning_subtitle": "Après de nombreux lavages, pensez à nettoyer le tambour pour améliorer les résultats de lavage.",
+    "CL_SL_CM_recommended_about": "À propos recommandé",
+    "CL_SL_CM_recommended_about_detail": "Ces programmes sont basés sur vos habitudes quotidiennes et sur des questionnaires.",
+    "CL_SL_CM_redo_the_questionnaire": "REFAIRE LE QUESTIONNAIRE",
+    "CL_SL_CM_laundry_title": "Lessive",
+    "CL_SL_CM_laundry_services_title": "Services de blanchisserie personnalisés",
+    "CL_SL_CM_laundry_services_detail": "Bienvenue ! Répondez aux questions suivantes pour nous aider à vous recommander de meilleurs programmes de lessive et à améliorer votre expérience globale de lessive.",
+    "CL_SL_CM_recommended_program_guide": "Guide du programme recommandé",
+    "CL_SL_CM_let's_get_started": "C'est parti !",
+    "CL_SL_CM_thank_you": "Merci!",
+    "CL_SL_CM_questionnaire_congratulations": "Félicitations pour avoir rempli le questionnaire, nous vous recommanderons le programme de lessive approprié en fonction du questionnaire, veuillez cocher la case « Recommandé ».",
+    "CL_DV_OV_light_setting_desc": "Allumez ou éteignez les lumières de votre four. Vous pouvez modifier la couleur et la durée dans le menu des paramètres d'éclairage.",
+    "CL_DV_OV_lock_setting_desc": "Avec le verrou, vous désactivez l'écran tactile.",
+    "CL_DV_OV_eco_setting_desc": "Aide à réduire la consommation d'énergie et à économiser l'électricité.",
+    "CL_DV_OV_night_mode_setting_desc": "Réduisez la luminosité de l'écran et/ou de la lumière pendant les heures nocturnes programmées.",
+    "CL_DV_OV_door_lock_setting_desc": "L'activation du verrouillage de la porte verrouillera la porte de votre four.",
+    "CL_CF_FM_one_day_left": "Il reste 1 jour",
+    "CL_CF_FM_x_item_selected": "*** élément sélectionné"
 }
