--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "טמפרטורות נמוכות יותר חסכוניות יותר מבחינה סטטיסטית באנרגיה, אז אולי כדאי לנסות טמפרטורת מים נמוכה יותר בפעם הבאה.",
     "add_appliance_connect_wifi_atos": "התחבר לרשת \"ConnectLife\" בהגדרות ה-Wi-Fi של הטלפון החכם שלך.\n\nצא מאפליקציית ConnectLife ועבור להגדרות ה-Wi-Fi של הטלפון החכם שלך. התחבר לרשת \"ConnectLife\", הקלד את הסיסמה \"ConnectLife\" וחזור לאפליקציה.",
     "after_sale_report_failed_desc_new": "אירעה שגיאה בלתי צפויה ולא ניתן היה לדווח על הבעיה.",
-    "CL_DV_RF_sf_remaining": "כרגע בסופר-הקפאה עם ** דקות שנותרו."
+    "CL_DV_RF_sf_remaining": "כרגע בסופר-הקפאה עם ** דקות שנותרו.",
+    "CL_SL_CM_library_title": "ספריית כביסה",
+    "CL_SL_CM_how_to_wash": "איך לשטוף",
+    "CL_SL_CM_how_to_care": "איך לטפל",
+    "CL_SL_CM_how_to_wash_detail": "ללמד אותך כיצד לכבס סוגים שונים של בגדים כגון משי, צמר, עור ומעילי פוך וכו'.",
+    "CL_SL_CM_how_to_care_detail": "ללמד אותך כיצד לטפל בסוגים שונים של בגדים כגון משי, צמר, עור, מעילי פוך וכו'.",
+    "CL_SL_CM_articles": "מאמרים",
+    "CL_SL_CM_assistant_title": "עוזר כביסה",
+    "CL_SL_CM_ai_wash_dry": "AI Wash & Dry",
+    "CL_SL_CM_drum_cleaning_subtitle": "לאחר כביסות רבות, נא לשקול ניקוי תוף כדי לשפר את תוצאות הכביסה.",
+    "CL_SL_CM_recommended_about": "בערך מומלץ",
+    "CL_SL_CM_recommended_about_detail": "תוכניות אלו מבוססות על ההרגלים והשאלונים היומיומיים שלך.",
+    "CL_SL_CM_redo_the_questionnaire": "בצע מחדש את השאלון",
+    "CL_SL_CM_laundry_title": "כְּבִיסָה",
+    "CL_SL_CM_laundry_services_title": "שירותי כביסה בהתאמה אישית",
+    "CL_SL_CM_laundry_services_detail": "קַבָּלַת פָּנִים! ענה על השאלות הבאות כדי לסייע לנו להמליץ ​​על תוכניות כביסה טובות יותר, ולשפר את חווית הכביסה הכוללת שלך.",
+    "CL_SL_CM_recommended_program_guide": "ממליץ על מדריך תוכנית",
+    "CL_SL_CM_let's_get_started": "בואו נתחיל!",
+    "CL_SL_CM_thank_you": "תודה לך!",
+    "CL_SL_CM_questionnaire_congratulations": "ברכות על מילוי השאלון, נמליץ לך על תוכנית הכביסה המתאימה על סמך השאלון, אנא בדוק ב\"מומלץ\".",
+    "CL_DV_OV_light_setting_desc": "הפעל או כבה את אורות התנור שלך. ניתן לשנות את הצבע ומשך הזמן בתפריט הגדרות האור.",
+    "CL_DV_OV_lock_setting_desc": "עם הנעילה, אתה משבית את מסך המגע.",
+    "CL_DV_OV_eco_setting_desc": "עוזר להפחית את צריכת האנרגיה ולחסוך בחשמל.",
+    "CL_DV_OV_night_mode_setting_desc": "הפחת את בהירות המסך ו/או התאורה בשעות הלילה המתוכנתות.",
+    "CL_DV_OV_door_lock_setting_desc": "הפעלת נעילת הדלת תנעל את דלת התנור שלך.",
+    "CL_CF_FM_one_day_left": "נותר יום 1",
+    "CL_CF_FM_x_item_selected": "*** פריט נבחר"
 }
