--- a/language/i18n_hr.json
+++ b/language/i18n_hr.json
@@ -2273,16 +2273,16 @@
     "bluetooth_connection_failed": "Bluetooth veza nije uspjela. Provjerite status uređaja.",
     "wm22_autodose": "Autodoza",
     "wm22_load_efficiency": "Učinkovitost opterećenja",
-    "wm22_load_efficiency_tips": "Izbjegavajte preopteretiti perilicu za učinkovitije čišćenje.",
+    "wm22_load_efficiency_tips": "Izbjegavajte preopterećenje perilice za učinkovitije čišćenje.",
     "wm22_detergent_softener_consumption": "Potrošnja deterdženta i omekšivača",
-    "wm22_detergent_softener_consumption_tips": "Zbog učinkovitosti punjenja i razine prljavštine odjeće, perilica je koristila manje deterdženta i omekšivača od predviđenog.",
+    "wm22_detergent_softener_consumption_tips": "Zbog učinkovitosti punjenja i razine zaprljanosti odjeće, perilica je koristila manje deterdženta i omekšivača od predviđenog.",
     "wm22_eco_tips": "Eko savjeti",
-    "wm22_load_efficiency_heavity_tips": "Perilica je produžila program jer je rublje bilo preteško. Izbjegavajte preopteretiti perilicu za učinkovitije čišćenje.",
-    "wm22_detergent_softener_consumption_heavity_tips": "Zbog učinkovitosti punjenja i razine prljavštine odjeće, perilica je koristila više deterdženta i omekšivača od predviđenog.",
+    "wm22_load_efficiency_heavity_tips": "Perilica je produžila program jer je rublje bilo preteško. Izbjegavajte preopterećenje perilice za učinkovitije čišćenje.",
+    "wm22_detergent_softener_consumption_heavity_tips": "Zbog učinkovitosti punjenja i razine zaprljanosti odjeće, perilica je koristila više deterdženta i omekšivača od predviđenog.",
     "wm22_no_sound": "Bez zvuka",
     "room_humidity": "Vlažnost prostorije",
-    "firmware_update_desc": "Redovito ažuriramo firmware uređaja kako bismo ga mogli učiniti boljim i sigurnijim za vas. Dobijte najnovije značajke ažuriranjem firmvera. Tijekom ažuriranja uređaj se ne može koristiti.",
-    "wifi_auto_updates": "Wi-Fi automatska ažuriranja",
+    "firmware_update_desc": "Redovito ažuriramo firmware uređaja kako bismo ga mogli učiniti boljim i sigurnijim za vas. Ažuriranjem firmvera do najnovijih značajki. Tijekom ažuriranja uređaj se ne može koristiti.",
+    "wifi_auto_updates": "Wi-Fi automatsko ažuriranje",
     "wifi_auto_updates_desc": "Omogućavanjem ove postavke uređaj će automatski ažurirati Wi-Fi firmware bez potrebe za potvrdom.",
     "device_fw": "FW uređaja",
     "wifi_fw": "Wi-Fi FW",
@@ -2331,17 +2331,17 @@
     "device_is_not_listed": "Uređaj nije naveden",
     "electrity_used": "utrošena električna energija",
     "welcome": "DOBRODOŠLI",
-    "welcome_tips": "Dobrodošli u ConnectLife. Dobro je imati vas u društvu.",
+    "welcome_tips": "Dobrodošli u ConnectLife.",
     "add_your_device": "DODAJTE SVOJ UREĐAJ",
     "add_your_device_tips": "Skenirajte kod uređaja i povežite svoj uređaj u samo nekoliko koraka.",
-    "discover_tips": "Kontrolirajte i nadzirite svoje uređaje s bilo kojeg mjesta i bilo kada.",
+    "discover_tips": "Kontrolirajte i nadzirite svoje uređaje bilo kada i bilo gdje.",
     "you_are_not_signed_in": "Niste prijavljeni",
     "energy_saving": "Ušteda energije",
     "how_to_use": "Kako koristiti",
     "app_preferences": "Postavke aplikacije",
     "washing_is_stopping_tips": "Pranje u {####} je u fazi zaustavljanja. \nDrugi program može se poslati u perilicu kada se trenutni program zaustavi.",
     "washing_is_stopping": "Pranje se zaustavlja.",
-    "local_network_permission_tips": "Molimo otvorite dopuštenja lokalne mreže.\n Postavka->Privatnost->Lokalna mreža",
+    "local_network_permission_tips": "Molimo dopuštenja lokalne mreže.\n Postavka->Privatnost->Lokalna mreža",
     "time_and_date_uppercase": "VRIJEME I DATUM",
     "use_phone_settings": "Koristite postavke telefona",
     "choose_device_category_tips": "Odaberite kategoriju kojoj vaš uređaj pripada.",
@@ -2381,24 +2381,24 @@
     "wine_3_zone_cs_6": "Odabrana mreža bit će prikazana na vrhu zaslona. Izađite pritiskom na \"x\".",
     "wine_3_zone_cs_7": "U izborniku \"Mrežna veza\" odaberite \"Uparivanje\".",
     "wine_3_zone_cs_8": "Uređaj je spreman za uparivanje sve dok je QR kod prikazan.\nKliknite DALJE za nastavak.",
-    "stand_by": "PRIČEKAJ",
+    "stand_by": "STAND BY",
     "home_status": "Kućni status",
-    "auto_fast_preheat": "Automatsko brzo predgrijavanje",
+    "auto_fast_preheat": "Automatsko brzo predzagrijavanje",
     "fast_cooling_heat_des": "Kroz QSD tehnologiju brzog inverterskog pokretanja, kompresor može postići najvišu frekvenciju u kratkom vremenu i postići brzo hlađenje.",
-    "quiet_des": "Buka rada klima uređaja je niža, a korisnik ima tiho i ugodno okruženje.",
+    "quiet_des": "Snižena je razina buke, korisnik uživa u tihom i ugodnom okruženju.",
     "sleep_des": "Omogućite različitu njegu temperature spavanja za članove obitelji, tako da možete udobno zaspati.",
     "e_heat_des": "U hladnim životnim uvjetima, naš Posebni način grijanja štiti vaš dom od smrzavanja održavajući temperaturu okoline od 8 ℃ kada ste duže vrijeme odsutni od kuće.",
     "air_purification_des": "Korištenje HI-NANO ili UVC, plazme, IFD i drugih metoda za inhibiciju bakterija ili virusa u zraku, igrajući ulogu u pročišćavanju zraka.",
     "ai_des": "AI SMART inteligentno zadovoljava vašu udobnost. Automatsko podešavanje temperature, vlažnosti i smjera vjetra.",
-    "ai_wind_des": "Klima uređaj može inteligentno kontrolirati vjetar na temelju vaše lokacije, možete odabrati način rada \"vjetar vas prati\" ili način rada \"vjetar vas izbjegava\".",
+    "ai_wind_des": "Klima uređaj može inteligentno kontrolirati ispuh zraka na temelju vaše lokacije, možete odabrati način rada \"vjetar vas prati\" ili način rada \"vjetar vas izbjegava\".",
     "energy_saving_des": "Klima uređaj može odmah prijeći u način rada za uštedu energije kako bi se smanjila potrošnja energije.",
     "verifying_code": "Kod za provjeru",
     "connecting_to_device": "Povezivanje s uređajem",
-    "linking_to_cloud": "Povezivanje s oblakom",
+    "linking_to_cloud": "Povezivanje na Cloud",
     "voice_assistant": "Glasovni pomoćnik",
     "setting_manage_rooms": "Upravljanje sobama",
     "setting_help_support": "Pomoć i podrška",
-    "auto_door_open": "Automatska vrata otvorena",
+    "auto_door_open": "Vrata su automatski otvorena",
     "noise_on_demand": "Tišina na zahtjev",
     "dry_sync_about_finish_tip": "## je pri kraju",
     "dry_sync_will_start_tip": "## će započeti s istim postavkama koje ste koristili u perilici rublja.",
@@ -2408,7 +2408,7 @@
     "wine_food_match_4": "Nemasna riba",
     "wine_food_match_5": "Voćni deserti",
     "wine_food_match_6": "Kozji sir",
-    "wine_food_match_7": "Suhomesnati",
+    "wine_food_match_7": "Suhomesnato",
     "wine_food_match_8": "Svinjetina",
     "wine_food_match_9": "Začinjene hrane",
     "wine_food_match_10": "Bilo koja brza hrana će poslužiti",
@@ -2439,7 +2439,7 @@
     "indoor_set_key": "UNUTARNJA GARNITURA",
     "cool_&_dhw_mode_key": "Hladno & TV",
     "heat_&_dhw_mode_key": "Toplina & TV",
-    "auto_&_dhw_mode_key": "Auto & TV",
+    "auto_&_dhw_mode_key": "Auto & DHW",
     "only_dhw_mode_key": "Samo TV",
     "climate_curve_key": "Klimatska krivulja",
     "dhw_priority_key": "Prioritet tople vode",
@@ -2447,7 +2447,7 @@
     "sterilization_key": "Dezinfekcija",
     "zone1_key": "Zona1",
     "zone2_key": "Zona2",
-    "dhw_key": "TV",
+    "dhw_key": "DHW",
     "holiday_start_in_days": "Počinje za ## dana",
     "end_time_forever_key": "zauvijek",
     "duct_power_statistics": "Energetski monitor",
@@ -2456,7 +2456,7 @@
     "beep_des": "Isključite zujalicu za tiše okruženje.",
     "ask_precise_location_permissions": "Molimo otvorite precizne dozvole za lokaciju.\nPodešavanje->Privatnost->Lokalne usluge->ConnectLife",
     "ask_location_permissions": "Molimo otvorite dozvole za lokaciju.\nPostavke->Privatnost->Lokalne usluge->Poveži život",
-    "light_setting": "Postavke svjetla",
+    "light_setting": "Postavke svjetline",
     "save_changes_tips": "Želite li spremiti promjene koje ste napravili?",
     "discard_changes": "Odbaciti promjene",
     "notification_settings": "Postavke obavijesti",
@@ -2494,15 +2494,15 @@
     "active_devices": "Aktivni uređaji",
     "remove_appliance_tips": "Uklanjanjem uređaja iz ove sobe, premjestit će se u zadanu sobu. Da biste izbrisali uređaj, morate ga raspariti.",
     "add_separated_ac_1": "Uključite uređaj.",
-    "add_separated_ac_2": "Usmjerite daljinski upravljač prema klima uređaju i @pritisnite 6 puta tipke za lijevi i desni vjetar.# Ili @pritisnite tipku \"Sleep\" 8 puta# na žičanom daljinskom upravljaču.",
+    "add_separated_ac_2": "Usmjerite daljinski upravljač prema klima uređaju i @pritisnite 6 puta tipke za lijevi i desni vjetar.# Ili @pritisnite tipku \"Sleep\" 8 puta# na daljinskom upravljaču.",
     "add_separated_ac_3": "Dok @zaslon ne prikaže “77”# ili će Wi-Fi lampica treptati.",
     "delete_account_alert_tips": "Imajte na umu da je ovo trajna akcija. Nakon toga nećete imati pristup svom računu, informacijama ili postavkama.",
     "wm_softener_and_detergent_empty": "Deterdžent i omekšivač su prazni, nastaviti proces?",
     "reset_filter": "Resetiraj filter na:",
-    "drink_management": "Upravljanje pićem",
+    "drink_management": "Upravljanje ",
     "light_desc": "Dodirnite za podešavanje svjetline osvjetljenja uređaja.",
     "wine_child_lock_desc": "Zaključajte upravljačku ploču uključujući funkciju dozatora.",
-    "sabbath_mode_desc": "Uključuje i isključuje subotnji način rada. Upravljačka ploča, svjetlo i zujalica neće raditi kada je način rada uključen.",
+    "sabbath_mode_desc": "Uključuje i isključuje Sabbath mode način rada. Upravljačka ploča, svjetlo i alarm neće raditi kada je Sabbath mode uključen.",
     "door_open": "Otvorena vrata",
     "door_open_t": "Otvorena vrata",
     "wine_times": "puta",
@@ -2557,7 +2557,7 @@
     "general_sounds": "Opći zvukovi",
     "no_change": "Bez promjena",
     "auto_d_and_t": "Automatsko vrijeme i datum",
-    "hi_wine_sabbath_des": "Šabatni režim je uključen! Kontrolna ploča, svjetlo i zujalica neće raditi!",
+    "hi_wine_sabbath_des": "Sabbath mode je uključen! Kontrolna ploča, svjetlo i alarm neće raditi!",
     "sound_f_d": "Zvuk",
     "display_dimming": "Zatamnjenje zaslona",
     "light_dimming": "Prigušivanje svjetla",
@@ -2570,7 +2570,7 @@
     "sort_by": "Poredaj po",
     "duration_long_to_short": "Trajanje: Dugo - Kratko",
     "duration_short_to_long": "Trajanje: Kratko - Dugo",
-    "name_a_to_z": "Ime: A - Ž",
+    "name_a_to_z": "Naziv: A - Z",
     "name_z_to_a": "Naziv: Z - A",
     "program_unavaiable_tips": "Upravljanje programom dostupno je samo kada je uređaj u stanju pripravnosti.",
     "amount_must_num": "Iznos mora biti broj",
@@ -2607,8 +2607,8 @@
     "interior_light_at_power_off": "Unutarnje svjetlo pri isključivanju",
     "light_switch": "PREBACIVANJE",
     "modes_usage": "Korištenje načina rada",
-    "asko_wine_statistic_des": "Pruža uvid u klimatsku kontrolu u vašem ormariću. Možete vidjeti temperaturu, vlažnost i vibracije za nekoliko vremenskih razdoblja.",
-    "asko_wine_lock_des": "Pomoću funkcije Key Lock onemogućavate dodirni zaslon. Također možete uključiti obavijesti o vratima i alarm za vrata.",
+    "asko_wine_statistic_des": "Uvid u: temperaturu, vlažnost i vibracije za nekoliko vremenskih razdoblja.",
+    "asko_wine_lock_des": "Pomoću funkcije Key Lock onemogućavate touch screen. Također možete uključiti obavijesti o vratima i alarm za vrata.",
     "asko_light_mode_des": "Smanjite svjetlinu zaslona i/ili svjetlost tijekom zakazanih noćnih sati.",
     "asko_wine_eco_des": "Pomaže smanjenju potrošnje energije i štednji električne energije.",
     "wine_inventory_search_empty": "Sadržaj nije pronađen.",
@@ -2641,7 +2641,7 @@
     "november_all": "Studeni",
     "december_all": "Prosinac",
     "refreshing_program_list": "Osvježavanje popisa programa.",
-    "refreshing_program_list_tips": "Popis programa trenutno osvježava. U međuvremenu je onemogućeno korištenje uređaja.",
+    "refreshing_program_list_tips": "Popis programa trenutno se osvježava. U međuvremenu je onemogućeno korištenje uređaja.",
     "pind_config_wifi_new_step1": "Dodirnite i držite tipku \"on/off\" 5 sekundi dok se ne pojavi simbol Wi-Fi mreže.",
     "pind_config_wifi_new_step2": "Dodirnite i držite simbol Wi-Fi mreže 5 sekundi dok se ne pojavi \"C\".",
     "pind_config_wifi_new_step3": "Dodirnite Wi-Fi simbol. \"C\" će početi treptati. Kliknite NEXT da biste nastavili.",
@@ -2827,7 +2827,7 @@
     "new_email_tips": "Unesite novu adresu e-pošte koju želite koristiti za svoj Connectlife račun.",
     "new_email_title": "NOVA E-POŠTA",
     "best_d_b": "Najbolje je piti prije",
-    "best_d_a": "Najbolje je piti nakon toga",
+    "best_d_a": "Najbolje je piti nakon ",
     "update_device_fw": "Ažuriraj FW uređaj",
     "hi_vari_temp_sens_head_failure": "Temperaturni senzor za (000)",
     "hi_vari_evap_temp_sens_head_failure": "Senzor isparivača za (000)",
@@ -2947,10 +2947,10 @@
     "long_press_to_speak": "Držite dugo za govor",
     "tv_pin_incorrect_tips": "Nažalost, kod koji ste unijeli je pogrešan. Provjerite i ponovno unesite!",
     "select_smart_tv": "Odabir pametnog televizora",
-    "auto_dose_quantity": "Količina automatske doze",
+    "auto_dose_quantity": "Količina automatskog doziranja",
     "ask_microphone_permissions": "Otvorite dozvole za mikrofon.\nSetting->Privacy->Microphone->ConnectLife",
-    "autodose_tips": "Automatski izdaje pravu količinu deterdženta za svaki ciklus pranja.",
-    "open_door_tips": "Otvorite vrata daljinski klikom na ovaj gumb",
+    "autodose_tips": "Automatsko ispuštanje prave količine deterdženta za svaki ciklus pranja.",
+    "open_door_tips": "Otvorite vrata daljinskim, klikom na ovaj gumb",
     "child_lock_tips": "Zaključava upravljačku ploču perilice posuđa, uključujući funkciju dozatora.",
     "add_favourite": "Dodaj u Favorite",
     "select_program": "Odabir programa",
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "Niže temperature su statistički energetski učinkovitije, pa sljedeći put možda želite pokušati s nižom temperaturom vode.",
     "add_appliance_connect_wifi_atos": "Povežite se s „ConnectLife” mrežom u Wi-Fi postavkama svog pametnog telefona.\n\nIzađite iz aplikacije ConnectLife i idite na Wi-Fi postavke svog pametnog telefona. Spojite se na “ConnectLife” mrežu, upišite lozinku “ConnectLife” i vratite se u aplikaciju.",
     "after_sale_report_failed_desc_new": "Došlo je do neočekivane pogreške i problem se nije mogao prijaviti.",
-    "CL_DV_RF_sf_remaining": "Trenutno u super zamrzavanju s preostalih ** min."
+    "CL_DV_RF_sf_remaining": "Trenutno u super zamrzavanju s preostalih ** min.",
+    "CL_SL_CM_library_title": "Knjižnica za pranje rublja",
+    "CL_SL_CM_how_to_wash": "Kako oprati",
+    "CL_SL_CM_how_to_care": "Kako se brinuti",
+    "CL_SL_CM_how_to_wash_detail": "Nauči vas kako prati različite vrste odjeće poput svile, vune, kože, jakni i perjanica itd.",
+    "CL_SL_CM_how_to_care_detail": "Nauči vas kako se brinuti za različite vrste odjeće poput svile, vune, kože, jakni i perjanica itd.",
+    "CL_SL_CM_articles": "članci",
+    "CL_SL_CM_assistant_title": "Pomoćnik u praonici rublja",
+    "CL_SL_CM_ai_wash_dry": "AI pranje i sušenje",
+    "CL_SL_CM_drum_cleaning_subtitle": "Nakon mnogo pranja, razmislite o čišćenju bubnja kako biste poboljšali rezultate pranja rublja.",
+    "CL_SL_CM_recommended_about": "Otprilike preporučeno",
+    "CL_SL_CM_recommended_about_detail": "Ovi programi temelje se na vašim svakodnevnim navikama i upitnicima.",
+    "CL_SL_CM_redo_the_questionnaire": "PONOVI UPITNIK",
+    "CL_SL_CM_laundry_title": "Praonica",
+    "CL_SL_CM_laundry_services_title": "Personalizirane usluge pranja rublja",
+    "CL_SL_CM_laundry_services_detail": "Dobrodošli! Odgovorite na sljedeća pitanja kako biste nam pomogli u preporučivanju boljih programa pranja rublja, poboljšavajući vaše cjelokupno iskustvo pranja rublja.",
+    "CL_SL_CM_recommended_program_guide": "Preporuka programskog vodiča",
+    "CL_SL_CM_let's_get_started": "Započnimo!",
+    "CL_SL_CM_thank_you": "Hvala!",
+    "CL_SL_CM_questionnaire_congratulations": "Čestitamo na ispunjavanju upitnika, na temelju upitnika ćemo vam preporučiti odgovarajući program pranja rublja, provjerite u \"Preporučeno\".",
+    "CL_DV_OV_light_setting_desc": "Uključite ili isključite svjetla u pećnici. Boju i trajanje možete promijeniti u izborniku postavki svjetla.",
+    "CL_DV_OV_lock_setting_desc": "S bravom onemogućujete dodirni zaslon.",
+    "CL_DV_OV_eco_setting_desc": "Pomaže smanjenju potrošnje energije i štednji električne energije.",
+    "CL_DV_OV_night_mode_setting_desc": "Smanjite svjetlinu zaslona i/ili svjetlost tijekom zakazanih noćnih sati.",
+    "CL_DV_OV_door_lock_setting_desc": "Uključivanje zaključavanja vrata zaključat će vrata vaše pećnice.",
+    "CL_CF_FM_one_day_left": "još 1 dan",
+    "CL_CF_FM_x_item_selected": "*** odabrana stavka"
 }
