--- a/language/i18n_hu.json
+++ b/language/i18n_hu.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "Az alacsonyabb hőmérséklet statisztikailag energiahatékonyabb, ezért érdemes legközelebb alacsonyabb vízhőmérsékletet kipróbálni.",
     "add_appliance_connect_wifi_atos": "Csatlakozzon a „ConnectLife” hálózathoz az okostelefon Wi-Fi beállításaiban.\n\nLépjen ki a ConnectLife alkalmazásból, és lépjen az okostelefon Wi-Fi beállításaihoz. Csatlakozzon a „ConnectLife” hálózathoz, írja be a „ConnectLife” jelszót, és térjen vissza az alkalmazáshoz.",
     "after_sale_report_failed_desc_new": "Váratlan hiba történt, és a problémát nem lehetett jelenteni.",
-    "CL_DV_RF_sf_remaining": "Jelenleg szuperfagyasztásban van, ** perc van hátra."
+    "CL_DV_RF_sf_remaining": "Jelenleg szuperfagyasztásban van, ** perc van hátra.",
+    "CL_SL_CM_library_title": "Mosodai könyvtár",
+    "CL_SL_CM_how_to_wash": "Hogyan kell mosni",
+    "CL_SL_CM_how_to_care": "Hogyan kell törődni",
+    "CL_SL_CM_how_to_wash_detail": "Megtaníthatja, hogyan kell mosni különböző típusú ruhákat, például selyem, gyapjú, bőr, kabát stb.",
+    "CL_SL_CM_how_to_care_detail": "Megtaníthatja, hogyan kell ápolni a különböző típusú ruhákat, például selyem, gyapjú, bőr, kabát stb.",
+    "CL_SL_CM_articles": "cikkeket",
+    "CL_SL_CM_assistant_title": "Mosodai asszisztens",
+    "CL_SL_CM_ai_wash_dry": "AI Wash & Dry",
+    "CL_SL_CM_drum_cleaning_subtitle": "Sok mosás után fontolja meg a dob tisztítását a mosás eredményének javítása érdekében.",
+    "CL_SL_CM_recommended_about": "Körülbelül ajánlott",
+    "CL_SL_CM_recommended_about_detail": "Ezek a programok az Ön napi szokásaira és kérdőíveire épülnek.",
+    "CL_SL_CM_redo_the_questionnaire": "ÚJRA A KÉRDŐÍV",
+    "CL_SL_CM_laundry_title": "Mosoda",
+    "CL_SL_CM_laundry_services_title": "Személyre szabott mosodai szolgáltatások",
+    "CL_SL_CM_laundry_services_detail": "Üdvözöljük! Válaszoljon a következő kérdésekre, hogy segítsen nekünk jobb mosási programokat ajánlani, és javítani az általános mosási élményt.",
+    "CL_SL_CM_recommended_program_guide": "Programkalauz ajánlása",
+    "CL_SL_CM_let's_get_started": "Kezdjük is!",
+    "CL_SL_CM_thank_you": "Köszönöm!",
+    "CL_SL_CM_questionnaire_congratulations": "Gratulálunk a kérdőív kitöltéséhez, a kérdőív alapján javasoljuk a megfelelő mosodai programot, kérjük, ellenőrizze az „Ajánlott” menüpontban.",
+    "CL_DV_OV_light_setting_desc": "Kapcsolja BE vagy KI a sütő világítását. A színt és az időtartamot a fénybeállítások menüben módosíthatja.",
+    "CL_DV_OV_lock_setting_desc": "A zárral letiltja az érintőképernyőt.",
+    "CL_DV_OV_eco_setting_desc": "Segít csökkenteni az energiafogyasztást és energiát megtakarítani.",
+    "CL_DV_OV_night_mode_setting_desc": "Csökkentse a képernyő fényerejét és/vagy a világítást a tervezett éjszakai órákban.",
+    "CL_DV_OV_door_lock_setting_desc": "Az ajtózár bekapcsolása bezárja a sütő ajtaját.",
+    "CL_CF_FM_one_day_left": "1 nap van hátra",
+    "CL_CF_FM_x_item_selected": "*** elem kiválasztva"
 }
