--- a/language/i18n_id.json
+++ b/language/i18n_id.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "Secara statistik, suhu yang lebih rendah lebih hemat energi, jadi Anda mungkin ingin mencoba suhu air yang lebih rendah lain kali.",
     "add_appliance_connect_wifi_atos": "Sambungkan ke jaringan “ConnectLife” di setelan Wi-Fi ponsel cerdas Anda.\n\nKeluar dari aplikasi ConnectLife dan buka setelan Wi-Fi ponsel cerdas Anda. Sambungkan ke jaringan \"ConnectLife\", ketik kata sandi \"ConnectLife\" dan kembali ke aplikasi.",
     "after_sale_report_failed_desc_new": "Terjadi kesalahan tak terduga dan masalah tidak dapat dilaporkan.",
-    "CL_DV_RF_sf_remaining": "Saat ini dalam kondisi super beku dengan ** menit tersisa."
+    "CL_DV_RF_sf_remaining": "Saat ini dalam kondisi super beku dengan ** menit tersisa.",
+    "CL_SL_CM_library_title": "Perpustakaan binatu",
+    "CL_SL_CM_how_to_wash": "Cara mencuci",
+    "CL_SL_CM_how_to_care": "Cara merawat",
+    "CL_SL_CM_how_to_wash_detail": "Mengajarkan Anda cara mencuci berbagai jenis pakaian seperti sutra, wol, kulit, dan jaket bulu angsa, dll.",
+    "CL_SL_CM_how_to_care_detail": "Mengajarkan Anda cara merawat berbagai jenis pakaian seperti sutra, wol, kulit, jaket bulu angsa, dll.",
+    "CL_SL_CM_articles": "Artikel",
+    "CL_SL_CM_assistant_title": "Asisten binatu",
+    "CL_SL_CM_ai_wash_dry": "Cuci & Keringkan dengan AI",
+    "CL_SL_CM_drum_cleaning_subtitle": "Setelah berkali-kali mencuci, pertimbangkan pembersihan tabung untuk meningkatkan hasil cucian.",
+    "CL_SL_CM_recommended_about": "Tentang yang direkomendasikan",
+    "CL_SL_CM_recommended_about_detail": "Program ini didasarkan pada kebiasaan harian dan kuesioner Anda.",
+    "CL_SL_CM_redo_the_questionnaire": "ULANGI KUESIONER",
+    "CL_SL_CM_laundry_title": "Cucian",
+    "CL_SL_CM_laundry_services_title": "Layanan binatu pribadi",
+    "CL_SL_CM_laundry_services_detail": "Selamat datang! Jawab pertanyaan berikut untuk membantu kami merekomendasikan program binatu yang lebih baik, sehingga meningkatkan pengalaman binatu Anda secara keseluruhan.",
+    "CL_SL_CM_recommended_program_guide": "Rekomendasikan panduan program",
+    "CL_SL_CM_let's_get_started": "Mari kita mulai!",
+    "CL_SL_CM_thank_you": "Terima kasih!",
+    "CL_SL_CM_questionnaire_congratulations": "Selamat atas penyelesaian kuesioner, kami akan merekomendasikan program laundry yang sesuai berdasarkan kuesioner, silakan centang pada kolom \"Rekomendasi\".",
+    "CL_DV_OV_light_setting_desc": "Nyalakan atau matikan lampu oven Anda. Anda dapat mengubah warna dan durasinya di menu pengaturan lampu.",
+    "CL_DV_OV_lock_setting_desc": "Dengan kunci, Anda menonaktifkan layar sentuh.",
+    "CL_DV_OV_eco_setting_desc": "Membantu mengurangi konsumsi energi dan menghemat listrik.",
+    "CL_DV_OV_night_mode_setting_desc": "Kurangi kecerahan layar dan/atau cahaya selama jam-jam malam yang terjadwal.",
+    "CL_DV_OV_door_lock_setting_desc": "Menyalakan kunci pintu akan mengunci pintu oven Anda.",
+    "CL_CF_FM_one_day_left": "Sisa 1 hari",
+    "CL_CF_FM_x_item_selected": "*** item dipilih"
 }
