--- a/language/i18n_it.json
+++ b/language/i18n_it.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "Statisticamente, temperature più basse sono più efficienti dal punto di vista energetico, quindi la prossima volta potresti provare a usare una temperatura dell'acqua più bassa.",
     "add_appliance_connect_wifi_atos": "Connettiti alla rete \"ConnectLife\" nelle impostazioni Wi-Fi del tuo smartphone.\n\nEsci dall'app ConnectLife e vai alle impostazioni Wi-Fi del tuo smartphone. Connettiti alla rete “ConnectLife”, digita la password “ConnectLife” e torna all'app.",
     "after_sale_report_failed_desc_new": "Si è verificato un errore imprevisto e non è stato possibile segnalare il problema.",
-    "CL_DV_RF_sf_remaining": "Attualmente in modalità super-congelamento con **minuti rimanenti."
+    "CL_DV_RF_sf_remaining": "Attualmente in modalità super-congelamento con **minuti rimanenti.",
+    "CL_SL_CM_library_title": "Biblioteca di lavanderia",
+    "CL_SL_CM_how_to_wash": "Come lavare",
+    "CL_SL_CM_how_to_care": "Come prendersi cura",
+    "CL_SL_CM_how_to_wash_detail": "Ti insegneremo come lavare diversi tipi di indumenti, come seta, lana, pelle, piumini, ecc.",
+    "CL_SL_CM_how_to_care_detail": "Ti insegnerà come prenderti cura di diversi tipi di indumenti, come seta, lana, pelle, piumini, ecc.",
+    "CL_SL_CM_articles": "articoli",
+    "CL_SL_CM_assistant_title": "Addetto alla lavanderia",
+    "CL_SL_CM_ai_wash_dry": "Lavaggio e asciugatura AI",
+    "CL_SL_CM_drum_cleaning_subtitle": "Dopo molti lavaggi, si consiglia di pulire il cestello per ottenere risultati migliori.",
+    "CL_SL_CM_recommended_about": "Informazioni consigliate",
+    "CL_SL_CM_recommended_about_detail": "Questi programmi si basano sulle tue abitudini quotidiane e sui questionari.",
+    "CL_SL_CM_redo_the_questionnaire": "RIFARE IL QUESTIONARIO",
+    "CL_SL_CM_laundry_title": "Lavanderia",
+    "CL_SL_CM_laundry_services_title": "Servizi di lavanderia personalizzati",
+    "CL_SL_CM_laundry_services_detail": "Benvenuti! Rispondete alle seguenti domande per aiutarci a consigliarvi programmi di lavanderia migliori, migliorando così la vostra esperienza complessiva di lavanderia.",
+    "CL_SL_CM_recommended_program_guide": "Consiglia la guida al programma",
+    "CL_SL_CM_let's_get_started": "Cominciamo!",
+    "CL_SL_CM_thank_you": "Grazie!",
+    "CL_SL_CM_questionnaire_congratulations": "Congratulazioni per aver completato il questionario, ti consiglieremo il programma di lavaggio più adatto in base al questionario; seleziona la voce \"Consigliato\".",
+    "CL_DV_OV_light_setting_desc": "Accendi o spegni le luci del forno. Puoi cambiare il colore e la durata nel menu delle impostazioni della luce.",
+    "CL_DV_OV_lock_setting_desc": "Con il lucchetto si disattiva il touch screen.",
+    "CL_DV_OV_eco_setting_desc": "Aiuta a ridurre il consumo di energia e a risparmiare elettricità.",
+    "CL_DV_OV_night_mode_setting_desc": "Riduci la luminosità dello schermo e/o della luce durante le ore notturne programmate.",
+    "CL_DV_OV_door_lock_setting_desc": "Attivando il blocco porta, lo sportello del forno si bloccherà.",
+    "CL_CF_FM_one_day_left": "1 giorno rimasto",
+    "CL_CF_FM_x_item_selected": "*** elemento selezionato"
 }
