--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "Төменгі температуралар статистикалық түрде энергияны тиімдірек етеді, сондықтан келесі жолы төменірек су температурасын қолданғыңыз келуі мүмкін.",
     "add_appliance_connect_wifi_atos": "Смартфоныңыздың Wi-Fi параметрлерінде «ConnectLife» желісіне қосылыңыз.\n\nConnectLife қолданбасынан шығып, смартфонның Wi-Fi параметрлеріне өтіңіз. «ConnectLife» желісіне қосылыңыз, «ConnectLife» құпия сөзін енгізіңіз және қолданбаға оралыңыз.",
     "after_sale_report_failed_desc_new": "Күтпеген қате орын алды және мәселе туралы хабарлау мүмкін болмады.",
-    "CL_DV_RF_sf_remaining": "Қазір супер мұздату режимінде ** мин қалды."
+    "CL_DV_RF_sf_remaining": "Қазір супер мұздату режимінде ** мин қалды.",
+    "CL_SL_CM_library_title": "Кір жуу кітапханасы",
+    "CL_SL_CM_how_to_wash": "Қалай жуу керек",
+    "CL_SL_CM_how_to_care": "Қалай күтім жасау керек",
+    "CL_SL_CM_how_to_wash_detail": "Сізге әртүрлі киім түрлерін, мысалы, жібек, жүн, былғары және мамық курткалар, т.б. жууды үйретіңіз.",
+    "CL_SL_CM_how_to_care_detail": "Сізге әртүрлі киім түрлерін, мысалы, жібек, жүн, былғары және мамық курткалар, т.б. күтім жасауды үйретіңіз.",
+    "CL_SL_CM_articles": "мақалалар",
+    "CL_SL_CM_assistant_title": "Кір жууға көмекші",
+    "CL_SL_CM_ai_wash_dry": "Жуу және кептіру",
+    "CL_SL_CM_drum_cleaning_subtitle": "Көптеген жуулардан кейін кірдің нәтижелерін жақсарту үшін барабанды тазалауды қарастырыңыз.",
+    "CL_SL_CM_recommended_about": "Ұсынылған туралы",
+    "CL_SL_CM_recommended_about_detail": "Бұл бағдарламалар сіздің күнделікті әдеттеріңіз бен сауалнамаларыңызға негізделген.",
+    "CL_SL_CM_redo_the_questionnaire": "САУАЛНАМАСЫН ҚАЙТА ЖАСАҢЫЗ",
+    "CL_SL_CM_laundry_title": "Кір",
+    "CL_SL_CM_laundry_services_title": "Жекелеген кір жуу қызметтері",
+    "CL_SL_CM_laundry_services_detail": "Қош келдіңіз! Жақсырақ кір жуу бағдарламаларын ұсынуға, жалпы кір жуу тәжірибеңізді жақсартуға көмектесу үшін келесі сұрақтарға жауап беріңіз.",
+    "CL_SL_CM_recommended_program_guide": "Бағдарлама нұсқаулығын ұсыныңыз",
+    "CL_SL_CM_let's_get_started": "Бастайық!",
+    "CL_SL_CM_thank_you": "Рақмет сізге!",
+    "CL_SL_CM_questionnaire_congratulations": "Сауалнаманы толтыруыңызбен құттықтаймыз, сауалнама негізінде сізге сәйкес кір жуу бағдарламасын ұсынамыз, «Ұсынылған» бөлімін тексеріңіз.",
+    "CL_DV_OV_light_setting_desc": "Пештің шамдарын ҚОСУ немесе ӨШІРУ. Түс пен ұзақтығын жарық параметрлері мәзірінде өзгертуге болады.",
+    "CL_DV_OV_lock_setting_desc": "Құлыппен сенсорлық экранды өшіресіз.",
+    "CL_DV_OV_eco_setting_desc": "Энергияның жүйесін төмендету мен электр энергиясын жеткізу көмек көрсетеді.",
+    "CL_DV_OV_night_mode_setting_desc": "Таңертеңгілік уақыттарда экрандың жарықтығын және/немесе жарықты кеміту.",
+    "CL_DV_OV_door_lock_setting_desc": "Есік құлпын қосу пешіңіздің есігін құлыптайды.",
+    "CL_CF_FM_one_day_left": "1 күн қалды",
+    "CL_CF_FM_x_item_selected": "*** элемент таңдалды"
 }
