--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "통계적으로 보면 온도가 낮을수록 에너지 효율이 더 높으므로 다음에는 더 낮은 물 온도를 시도해 보는 것이 좋습니다.",
     "add_appliance_connect_wifi_atos": "스마트폰의 Wi-Fi 설정에서 \"ConnectLife\" 네트워크에 연결합니다.\n\nConnectLife 앱을 종료하고 스마트폰의 Wi-Fi 설정으로 이동합니다. \"ConnectLife\" 네트워크에 연결하고 암호 \"ConnectLife\"를 입력한 다음 앱으로 돌아갑니다.",
     "after_sale_report_failed_desc_new": "예상치 못한 오류가 발생하여 문제를 보고할 수 없습니다.",
-    "CL_DV_RF_sf_remaining": "현재 극저온 상태이며 **분 남았습니다."
+    "CL_DV_RF_sf_remaining": "현재 극저온 상태이며 **분 남았습니다.",
+    "CL_SL_CM_library_title": "세탁소 도서관",
+    "CL_SL_CM_how_to_wash": "세탁 방법",
+    "CL_SL_CM_how_to_care": "어떻게 돌보나요",
+    "CL_SL_CM_how_to_wash_detail": "실크, 울, 가죽, 다운 재킷 등 다양한 종류의 의류를 세탁하는 방법을 알려드립니다.",
+    "CL_SL_CM_how_to_care_detail": "실크, 울, 가죽, 다운 재킷 등 다양한 종류의 의류 관리 방법을 알려드립니다.",
+    "CL_SL_CM_articles": "조항",
+    "CL_SL_CM_assistant_title": "세탁 보조원",
+    "CL_SL_CM_ai_wash_dry": "AI 워시앤드라이",
+    "CL_SL_CM_drum_cleaning_subtitle": "세탁을 여러 번 한 후에는 세탁 드럼을 청소하여 세탁 효과를 높이는 것이 좋습니다.",
+    "CL_SL_CM_recommended_about": "추천사항에 대하여",
+    "CL_SL_CM_recommended_about_detail": "이러한 프로그램은 귀하의 일상 습관과 설문조사를 바탕으로 만들어졌습니다.",
+    "CL_SL_CM_redo_the_questionnaire": "설문지를 다시 작성하세요",
+    "CL_SL_CM_laundry_title": "빨래",
+    "CL_SL_CM_laundry_services_title": "개인 맞춤형 세탁 서비스",
+    "CL_SL_CM_laundry_services_detail": "환영합니다! 다음 질문에 답하여 더 나은 세탁 프로그램을 추천하고 전반적인 세탁 경험을 향상시키는 데 도움을 주세요.",
+    "CL_SL_CM_recommended_program_guide": "추천 프로그램 가이드",
+    "CL_SL_CM_let's_get_started": "시작해 볼까요!",
+    "CL_SL_CM_thank_you": "감사합니다!",
+    "CL_SL_CM_questionnaire_congratulations": "설문조사에 응해 주셔서 축하드립니다. 설문조사에 따라 적합한 세탁 프로그램을 추천해 드리겠습니다. \"추천\"에 체크해 주세요.",
+    "CL_DV_OV_light_setting_desc": "오븐 조명을 켜거나 끕니다. 조명 설정 메뉴에서 색상과 지속 시간을 변경할 수 있습니다.",
+    "CL_DV_OV_lock_setting_desc": "잠금 기능을 사용하면 터치 스크린을 사용할 수 없습니다.",
+    "CL_DV_OV_eco_setting_desc": "에너지 소비를 줄이고 전기를 절약하는 데 도움이 됩니다.",
+    "CL_DV_OV_night_mode_setting_desc": "예약된 야간 시간 동안 화면 밝기와/또는 조명을 낮춥니다.",
+    "CL_DV_OV_door_lock_setting_desc": "도어 잠금장치를 켜면 오븐 문이 잠깁니다.",
+    "CL_CF_FM_one_day_left": "1일 남음",
+    "CL_CF_FM_x_item_selected": "*** 항목 선택됨"
 }
