--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "Пониските температури се статистички енергетски поефикасни, па можеби ќе сакате да пробате пониска температура на водата следниот пат.",
     "add_appliance_connect_wifi_atos": "Поврзете се на мрежата „ConnectLife“ во поставките за Wi-Fi на вашиот паметен телефон.\n\nИзлезете од апликацијата ConnectLife и одете до поставките за Wi-Fi на паметниот телефон. Поврзете се на мрежата „ConnectLife“, внесете ја лозинката „ConnectLife“ и вратете се во апликацијата.",
     "after_sale_report_failed_desc_new": "Настана неочекувана грешка и проблемот не може да се пријави.",
-    "CL_DV_RF_sf_remaining": "Моментално е во супер замрзнување со преостанати ** мин."
+    "CL_DV_RF_sf_remaining": "Моментално е во супер замрзнување со преостанати ** мин.",
+    "CL_SL_CM_library_title": "Библиотека за перење",
+    "CL_SL_CM_how_to_wash": "Како да се мие",
+    "CL_SL_CM_how_to_care": "Како да се грижите",
+    "CL_SL_CM_how_to_wash_detail": "Ве научи како да перете различни видови облека како свила, волна, кожа и јакни, итн.",
+    "CL_SL_CM_how_to_care_detail": "Ве научи како да се грижите за различни видови облека како свила, волна, кожа и јакни, итн.",
+    "CL_SL_CM_articles": "статии",
+    "CL_SL_CM_assistant_title": "Помошник за перење",
+    "CL_SL_CM_ai_wash_dry": "AI Wash & Dry",
+    "CL_SL_CM_drum_cleaning_subtitle": "По многу перења, размислете за чистење на барабанот за да ги подобрите резултатите од перењето.",
+    "CL_SL_CM_recommended_about": "Околу препорачано",
+    "CL_SL_CM_recommended_about_detail": "Овие програми се засноваат на вашите секојдневни навики и прашалници.",
+    "CL_SL_CM_redo_the_questionnaire": "ПОВТОРНЕТЕ ГО ПРАШАЛНИКОТ",
+    "CL_SL_CM_laundry_title": "Перење",
+    "CL_SL_CM_laundry_services_title": "Персонализирани услуги за перење",
+    "CL_SL_CM_laundry_services_detail": "Добредојдовте! Одговорете на следните прашања за да ни помогнете да препорачаме подобри програми за перење алишта, со што ќе го подобрите вашето целокупно искуство при перење.",
+    "CL_SL_CM_recommended_program_guide": "Препорачај програмски водич",
+    "CL_SL_CM_let's_get_started": "Ајде да започнеме!",
+    "CL_SL_CM_thank_you": "Ви благодариме!",
+    "CL_SL_CM_questionnaire_congratulations": "Честитки за пополнувањето на прашалникот, ќе ви ја препорачаме соодветната програма за перење алишта врз основа на прашалникот, ве молиме проверете во „Препорачано“.",
+    "CL_DV_OV_light_setting_desc": "Вклучете или исклучете ги светлата на рерната. Можете да ги промените бојата и времетраењето во менито за поставки за светло.",
+    "CL_DV_OV_lock_setting_desc": "Со заклучувањето, го оневозможувате екранот на допир.",
+    "CL_DV_OV_eco_setting_desc": "Помага во намалување на потрошувачката на енергија и заштеда на електрична енергија.",
+    "CL_DV_OV_night_mode_setting_desc": "Намалете јасност на екранот и/или светлина за време на закажаните ноќни часови.",
+    "CL_DV_OV_door_lock_setting_desc": "Вклучувањето на бравата на вратата ќе ја заклучи вратата од вашата рерна.",
+    "CL_CF_FM_one_day_left": "Остана уште 1 ден",
+    "CL_CF_FM_x_item_selected": "Избрана е *** ставка"
 }
