--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "Suhu yang lebih rendah secara statistik adalah lebih cekap tenaga, jadi anda mungkin mahu mencuba suhu air yang lebih rendah pada masa akan datang.",
     "add_appliance_connect_wifi_atos": "Sambung ke rangkaian \"ConnectLife\" dalam tetapan Wi-Fi telefon pintar anda.\n\nKeluar daripada apl ConnectLife dan pergi ke tetapan Wi-Fi telefon pintar anda. Sambung ke rangkaian \"ConnectLife\", taip kata laluan \"ConnectLife\" dan kembali ke apl.",
     "after_sale_report_failed_desc_new": "Ralat yang tidak dijangka telah berlaku dan isu itu tidak dapat dilaporkan.",
-    "CL_DV_RF_sf_remaining": "Pada masa ini dalam keadaan beku super dengan baki ** min."
+    "CL_DV_RF_sf_remaining": "Pada masa ini dalam keadaan beku super dengan baki ** min.",
+    "CL_SL_CM_library_title": "Perpustakaan dobi",
+    "CL_SL_CM_how_to_wash": "Cara mencuci",
+    "CL_SL_CM_how_to_care": "Bagaimana untuk menjaga",
+    "CL_SL_CM_how_to_wash_detail": "Ajar anda cara Mencuci pelbagai jenis pakaian seperti sutera, bulu, kulit dan jaket bawah, dsb.",
+    "CL_SL_CM_how_to_care_detail": "Ajar anda cara menjaga pelbagai jenis pakaian seperti sutera, bulu, kulit dan jaket bawah, dsb.",
+    "CL_SL_CM_articles": "artikel",
+    "CL_SL_CM_assistant_title": "Pembantu dobi",
+    "CL_SL_CM_ai_wash_dry": "AI Basuh & Keringkan",
+    "CL_SL_CM_drum_cleaning_subtitle": "Selepas banyak cucian, sila pertimbangkan pembersihan dram untuk meningkatkan hasil cucian.",
+    "CL_SL_CM_recommended_about": "Mengenai disyorkan",
+    "CL_SL_CM_recommended_about_detail": "Program ini adalah berdasarkan tabiat harian dan soal selidik anda.",
+    "CL_SL_CM_redo_the_questionnaire": "BUAT SEMULA SOAL SELIDIK",
+    "CL_SL_CM_laundry_title": "Dobi",
+    "CL_SL_CM_laundry_services_title": "Perkhidmatan dobi peribadi",
+    "CL_SL_CM_laundry_services_detail": "Selamat datang! Jawab soalan berikut untuk membantu kami mengesyorkan program dobi yang lebih baik, meningkatkan pengalaman dobi anda secara keseluruhan.",
+    "CL_SL_CM_recommended_program_guide": "Mengesyorkan panduan program",
+    "CL_SL_CM_let's_get_started": "Mari mulakan!",
+    "CL_SL_CM_thank_you": "Terima kasih!",
+    "CL_SL_CM_questionnaire_congratulations": "Tahniah kerana melengkapkan soal selidik, kami akan mengesyorkan anda program dobi yang sesuai berdasarkan soal selidik, sila semak dalam \"Disyorkan\".",
+    "CL_DV_OV_light_setting_desc": "Hidupkan atau MATI lampu ketuhar anda. Anda boleh menukar warna dan tempoh dalam menu tetapan cahaya.",
+    "CL_DV_OV_lock_setting_desc": "Dengan kunci, anda melumpuhkan skrin sentuh.",
+    "CL_DV_OV_eco_setting_desc": "Membantu mengurangkan penggunaan tenaga dan menjimatkan elektrik.",
+    "CL_DV_OV_night_mode_setting_desc": "Kurangkan kecerahan skrin dan/atau cahaya semasa waktu malam yang dirancang.",
+    "CL_DV_OV_door_lock_setting_desc": "Menghidupkan kunci pintu akan mengunci pintu ketuhar anda.",
+    "CL_CF_FM_one_day_left": "tinggal 1 hari lagi",
+    "CL_CF_FM_x_item_selected": "*** item dipilih"
 }
