--- a/language/i18n_nl.json
+++ b/language/i18n_nl.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "Statistisch gezien zijn lagere temperaturen energiezuiniger. Probeer daarom de volgende keer een lagere watertemperatuur.",
     "add_appliance_connect_wifi_atos": "Maak verbinding met het \"ConnectLife\"-netwerk in de Wi-Fi-instellingen van uw smartphone.\n\nSluit de ConnectLife-app af en ga naar de Wi-Fi-instellingen van uw smartphone. Maak verbinding met het \"ConnectLife\"-netwerk, typ het wachtwoord \"ConnectLife\" in en keer terug naar de app.",
     "after_sale_report_failed_desc_new": "Er is een onverwachte fout opgetreden en het probleem kon niet worden gemeld.",
-    "CL_DV_RF_sf_remaining": "Momenteel in supervriezer met ** min resterend."
+    "CL_DV_RF_sf_remaining": "Momenteel in supervriezer met ** min resterend.",
+    "CL_SL_CM_library_title": "Wasbibliotheek",
+    "CL_SL_CM_how_to_wash": "Hoe te wassen",
+    "CL_SL_CM_how_to_care": "Hoe te verzorgen",
+    "CL_SL_CM_how_to_wash_detail": "Leer hoe u verschillende soorten kleding kunt wassen, zoals zijde, wol, leer, donsjassen, enz.",
+    "CL_SL_CM_how_to_care_detail": "Leer hoe je verschillende soorten kleding moet verzorgen, zoals zijde, wol, leer, donsjassen, etc.",
+    "CL_SL_CM_articles": "artikelen",
+    "CL_SL_CM_assistant_title": "Was assistent",
+    "CL_SL_CM_ai_wash_dry": "AI Wassen & Drogen",
+    "CL_SL_CM_drum_cleaning_subtitle": "Na een aantal wasbeurten kunt u overwegen de trommel te reinigen om het wasresultaat te verbeteren.",
+    "CL_SL_CM_recommended_about": "Over aanbevolen",
+    "CL_SL_CM_recommended_about_detail": "Deze programma's zijn gebaseerd op uw dagelijkse gewoontes en vragenlijsten.",
+    "CL_SL_CM_redo_the_questionnaire": "HERHAAL DE VRAGENLIJST",
+    "CL_SL_CM_laundry_title": "De was",
+    "CL_SL_CM_laundry_services_title": "Gepersonaliseerde wasservices",
+    "CL_SL_CM_laundry_services_detail": "Welkom! Beantwoord de volgende vragen om ons te helpen betere wasprogramma's aan te bevelen, waardoor uw algehele waservaring wordt verbeterd.",
+    "CL_SL_CM_recommended_program_guide": "Aanbevolen programmagids",
+    "CL_SL_CM_let's_get_started": "Laten we beginnen!",
+    "CL_SL_CM_thank_you": "Bedankt!",
+    "CL_SL_CM_questionnaire_congratulations": "Gefeliciteerd met het invullen van de vragenlijst. Op basis van de vragenlijst adviseren wij u over het juiste wasprogramma. Controleer hiervoor de 'Aanbevolen' optie.",
+    "CL_DV_OV_light_setting_desc": "Zet uw ovenverlichting AAN of UIT. U kunt de kleur en duur wijzigen in het menu met lichtinstellingen.",
+    "CL_DV_OV_lock_setting_desc": "Met het slot schakelt u het touchscreen uit.",
+    "CL_DV_OV_eco_setting_desc": "Helpt het energieverbruik te verminderen en elektriciteit te besparen.",
+    "CL_DV_OV_night_mode_setting_desc": "Gebruik de nachtmodus om de helderheid van het scherm van de wijnkast te verminderen en/of het licht in de kast te wijzigen.",
+    "CL_DV_OV_door_lock_setting_desc": "Als u de deurvergrendeling inschakelt, wordt de deur van uw oven vergrendeld.",
+    "CL_CF_FM_one_day_left": "Nog 1 dag",
+    "CL_CF_FM_x_item_selected": "*** item geselecteerd"
 }
