--- a/language/i18n_pl.json
+++ b/language/i18n_pl.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "Statystycznie rzecz biorąc, niższe temperatury oznaczają większą oszczędność energii, więc następnym razem możesz spróbować ustawić niższą temperaturę wody.",
     "add_appliance_connect_wifi_atos": "Połącz się z siecią „ConnectLife” w ustawieniach Wi-Fi swojego smartfona.\n\nWyjdź z aplikacji ConnectLife i przejdź do ustawień Wi-Fi smartfona. Połącz się z siecią „ConnectLife”, wpisz hasło „ConnectLife” i wróć do aplikacji.",
     "after_sale_report_failed_desc_new": "Wystąpił nieoczekiwany błąd i nie można było zgłosić problemu.",
-    "CL_DV_RF_sf_remaining": "Aktualnie w trybie superfreeze, pozostało ** min."
+    "CL_DV_RF_sf_remaining": "Aktualnie w trybie superfreeze, pozostało ** min.",
+    "CL_SL_CM_library_title": "Biblioteka pralnicza",
+    "CL_SL_CM_how_to_wash": "Jak prać",
+    "CL_SL_CM_how_to_care": "Jak dbać",
+    "CL_SL_CM_how_to_wash_detail": "Nauczymy Cię, jak prać różne rodzaje odzieży, np. jedwab, wełnę, skórę, kurtki puchowe itp.",
+    "CL_SL_CM_how_to_care_detail": "Nauczymy Cię, jak dbać o różne rodzaje odzieży, np. jedwabną, wełnianą, skórzaną, kurtki puchowe itp.",
+    "CL_SL_CM_articles": "artykuły",
+    "CL_SL_CM_assistant_title": "Pomocnik pralniczy",
+    "CL_SL_CM_ai_wash_dry": "Pranie i suszenie AI",
+    "CL_SL_CM_drum_cleaning_subtitle": "Po wielu praniach rozważ wyczyszczenie bębna w celu uzyskania lepszych efektów prania.",
+    "CL_SL_CM_recommended_about": "O polecanych",
+    "CL_SL_CM_recommended_about_detail": "Programy te opierają się na Twoich codziennych nawykach i kwestionariuszach.",
+    "CL_SL_CM_redo_the_questionnaire": "PRZEPROWADŹ ANKIETĘ",
+    "CL_SL_CM_laundry_title": "Pranie",
+    "CL_SL_CM_laundry_services_title": "Spersonalizowane usługi pralnicze",
+    "CL_SL_CM_laundry_services_detail": "Witamy! Odpowiedz na poniższe pytania, aby pomóc nam w rekomendowaniu lepszych programów prania, ulepszając Twoje ogólne doświadczenie prania.",
+    "CL_SL_CM_recommended_program_guide": "Poleć przewodnik po programach",
+    "CL_SL_CM_let's_get_started": "Zaczynajmy!",
+    "CL_SL_CM_thank_you": "Dziękuję!",
+    "CL_SL_CM_questionnaire_congratulations": "Gratulujemy wypełnienia ankiety, na podstawie ankiety zalecimy Państwu odpowiedni program prania, prosimy o zaznaczenie pola „Polecane”.",
+    "CL_DV_OV_light_setting_desc": "Włącz lub wyłącz światła piekarnika. Możesz zmienić kolor i czas trwania w menu ustawień światła.",
+    "CL_DV_OV_lock_setting_desc": "Za pomocą blokady wyłączasz ekran dotykowy.",
+    "CL_DV_OV_eco_setting_desc": "Pomaga zmniejszyć zużycie energii i oszczędzać elektryczność.",
+    "CL_DV_OV_night_mode_setting_desc": "Zmniejsz jasność ekranu i/lub oświetlenie w zaplanowanych godzinach nocnych.",
+    "CL_DV_OV_door_lock_setting_desc": "Włączenie blokady drzwi spowoduje zablokowanie drzwi piekarnika.",
+    "CL_CF_FM_one_day_left": "Pozostał 1 dzień",
+    "CL_CF_FM_x_item_selected": "*** wybrano pozycję"
 }
