--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "Temperaturas mais baixas são estatisticamente mais eficientes em termos de energia, então talvez você queira tentar uma temperatura de água mais baixa na próxima vez.",
     "add_appliance_connect_wifi_atos": "Ligue-se à rede “ConnectLife” nas definições de Wi-Fi do seu smartphone.\n\nSaia da aplicação ConnectLife e aceda às definições de Wi-Fi do seu smartphone. Ligue-se à rede “ConnectLife”, introduza a palavra-passe “ConnectLife” e regresse à aplicação.",
     "after_sale_report_failed_desc_new": "Ocorreu um erro inesperado e o problema não pôde ser relatado.",
-    "CL_DV_RF_sf_remaining": "Atualmente em super congelamento com ** min restantes."
+    "CL_DV_RF_sf_remaining": "Atualmente em super congelamento com ** min restantes.",
+    "CL_SL_CM_library_title": "Biblioteca de lavanderia",
+    "CL_SL_CM_how_to_wash": "Como lavar",
+    "CL_SL_CM_how_to_care": "Como cuidar",
+    "CL_SL_CM_how_to_wash_detail": "Ensinaremos como lavar diferentes tipos de roupas, como seda, lã, couro, jaquetas de plumas, etc.",
+    "CL_SL_CM_how_to_care_detail": "Ensinar você a cuidar de diferentes tipos de roupas, como seda, lã, couro, jaquetas de plumas, etc.",
+    "CL_SL_CM_articles": "artigos",
+    "CL_SL_CM_assistant_title": "Auxiliar de lavanderia",
+    "CL_SL_CM_ai_wash_dry": "Lavagem e Secagem AI",
+    "CL_SL_CM_drum_cleaning_subtitle": "Depois de muitas lavagens, considere limpar o tambor para melhorar os resultados da lavagem.",
+    "CL_SL_CM_recommended_about": "Sobre recomendado",
+    "CL_SL_CM_recommended_about_detail": "Esses programas são baseados em seus hábitos diários e questionários.",
+    "CL_SL_CM_redo_the_questionnaire": "REFAZER O QUESTIONÁRIO",
+    "CL_SL_CM_laundry_title": "Lavanderia",
+    "CL_SL_CM_laundry_services_title": "Serviços de lavanderia personalizados",
+    "CL_SL_CM_laundry_services_detail": "Bem-vindo! Responda às seguintes perguntas para nos ajudar a recomendar melhores programas de lavanderia, aprimorando sua experiência geral de lavanderia.",
+    "CL_SL_CM_recommended_program_guide": "Recomendar guia de programa",
+    "CL_SL_CM_let's_get_started": "Vamos começar!",
+    "CL_SL_CM_thank_you": "Obrigado!",
+    "CL_SL_CM_questionnaire_congratulations": "Parabéns por responder ao questionário, recomendaremos o programa de lavanderia apropriado com base no questionário, marque em \"Recomendado\".",
+    "CL_DV_OV_light_setting_desc": "Ligue ou desligue as luzes do seu forno. Você pode alterar a cor e a duração no menu de configurações de luz.",
+    "CL_DV_OV_lock_setting_desc": "Com o bloqueio, você desabilita a tela sensível ao toque.",
+    "CL_DV_OV_eco_setting_desc": "Ajuda a reduzir o consumo de energia e a poupar eletricidade.",
+    "CL_DV_OV_night_mode_setting_desc": "Reduza o brilho da tela e/ou a luz durante as horas programadas da noite.",
+    "CL_DV_OV_door_lock_setting_desc": "Ativar a trava da porta travará a porta do seu forno.",
+    "CL_CF_FM_one_day_left": "Falta 1 dia",
+    "CL_CF_FM_x_item_selected": "*** item selecionado"
 }
