--- a/language/i18n_ro.json
+++ b/language/i18n_ro.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "Temperaturile mai scăzute sunt statistic mai eficiente din punct de vedere energetic, așa că poate doriți să încercați o temperatură mai scăzută a apei data viitoare.",
     "add_appliance_connect_wifi_atos": "Conectați-vă la rețeaua „ConnectLife” din setările Wi-Fi ale smartphone-ului dvs..\n\nIeșiți din aplicația ConnectLife și accesați setările Wi-Fi ale smartphone-ului. Conectați-vă la rețeaua „ConnectLife”, introduceți parola „ConnectLife” și reveniți la aplicație.",
     "after_sale_report_failed_desc_new": "A apărut o eroare neașteptată și problema nu a putut fi raportată.",
-    "CL_DV_RF_sf_remaining": "Momentan în super congelare cu ** min rămase."
+    "CL_DV_RF_sf_remaining": "Momentan în super congelare cu ** min rămase.",
+    "CL_SL_CM_library_title": "Biblioteca de spălătorie",
+    "CL_SL_CM_how_to_wash": "Cum să se spele",
+    "CL_SL_CM_how_to_care": "Cum să ai grijă",
+    "CL_SL_CM_how_to_wash_detail": "Vă învață cum să spălați diferite tipuri de îmbrăcăminte, cum ar fi mătase, lână, piele și jachete de puf etc.",
+    "CL_SL_CM_how_to_care_detail": "Te învață cum să îngrijești diferite tipuri de îmbrăcăminte, cum ar fi mătase, lână, piele și jachete de puf etc.",
+    "CL_SL_CM_articles": "articole",
+    "CL_SL_CM_assistant_title": "Asistent de spălătorie",
+    "CL_SL_CM_ai_wash_dry": "AI Wash & Dry",
+    "CL_SL_CM_drum_cleaning_subtitle": "După multe spălări, vă rugăm să luați în considerare curățarea tamburului pentru a îmbunătăți rezultatele spălării rufelor.",
+    "CL_SL_CM_recommended_about": "Despre recomandat",
+    "CL_SL_CM_recommended_about_detail": "Aceste programe se bazează pe obiceiurile și chestionarele tale zilnice.",
+    "CL_SL_CM_redo_the_questionnaire": "REFACEȚI CHESTIONARUL",
+    "CL_SL_CM_laundry_title": "Spălătorie",
+    "CL_SL_CM_laundry_services_title": "Servicii de spalatorie personalizate",
+    "CL_SL_CM_laundry_services_detail": "Bun venit! Răspundeți la următoarele întrebări pentru a ne ajuta să vă recomandăm programe de spălătorie mai bune, îmbunătățindu-vă experiența generală de spălătorie.",
+    "CL_SL_CM_recommended_program_guide": "Recomand ghidul de programe",
+    "CL_SL_CM_let's_get_started": "Să începem!",
+    "CL_SL_CM_thank_you": "Multumesc!",
+    "CL_SL_CM_questionnaire_congratulations": "Felicitări pentru completarea chestionarului, vă vom recomanda programul de spălătorie adecvat pe baza chestionarului, vă rugăm să verificați în „Recomandat”.",
+    "CL_DV_OV_light_setting_desc": "Aprindeți sau stingeți luminile cuptorului. Puteți schimba culoarea și durata în meniul de setări de lumină.",
+    "CL_DV_OV_lock_setting_desc": "Cu blocarea, dezactivați ecranul tactil.",
+    "CL_DV_OV_eco_setting_desc": "Ajută la reducerea consumului de energie și economisirea electricității.",
+    "CL_DV_OV_night_mode_setting_desc": "Reduceți luminozitatea ecranului și/sau a luminii în timpul orelor programate de noapte.",
+    "CL_DV_OV_door_lock_setting_desc": "Activarea blocării ușii va bloca ușa cuptorului dumneavoastră.",
+    "CL_CF_FM_one_day_left": "1 zi ramasa",
+    "CL_CF_FM_x_item_selected": "*** articol selectat"
 }
