--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "По статистике, более низкие температуры более энергоэффективны, поэтому в следующий раз вы можете попробовать использовать более низкую температуру воды.",
     "add_appliance_connect_wifi_atos": "Подключитесь к сети ConnectLife в настройках Wi-Fi вашего смартфона. Выйдите из приложения ConnectLife и перейдите к настройкам Wi-Fi вашего смартфона. Подключитесь к сети ConnectLife, введите пароль ConnectLife и вернитесь в приложение.",
     "after_sale_report_failed_desc_new": "Произошла непредвиденная ошибка, и сообщить о проблеме не удалось.",
-    "CL_DV_RF_sf_remaining": "В настоящее время выполняется суперзаморозка, осталось ** мин."
+    "CL_DV_RF_sf_remaining": "В настоящее время выполняется суперзаморозка, осталось ** мин.",
+    "CL_SL_CM_library_title": "Библиотека прачечной",
+    "CL_SL_CM_how_to_wash": "Как мыть",
+    "CL_SL_CM_how_to_care": "Как ухаживать",
+    "CL_SL_CM_how_to_wash_detail": "Научу вас стирать различные виды одежды, такие как шелк, шерсть, кожа, пуховики и т. д.",
+    "CL_SL_CM_how_to_care_detail": "Научите вас ухаживать за различными типами одежды, такими как шелк, шерсть, кожа, пуховики и т. д.",
+    "CL_SL_CM_articles": "статьи",
+    "CL_SL_CM_assistant_title": "Помощник прачечной",
+    "CL_SL_CM_ai_wash_dry": "Стирка и сушка AI",
+    "CL_SL_CM_drum_cleaning_subtitle": "После многочисленных стирок рассмотрите возможность очистки барабана, чтобы улучшить результаты стирки.",
+    "CL_SL_CM_recommended_about": "О рекомендуемом",
+    "CL_SL_CM_recommended_about_detail": "Эти программы основаны на ваших ежедневных привычках и анкетах.",
+    "CL_SL_CM_redo_the_questionnaire": "ПЕРЕДЕЛАЙТЕ АНКЕТУ",
+    "CL_SL_CM_laundry_title": "Прачечная",
+    "CL_SL_CM_laundry_services_title": "Персонализированные услуги прачечной",
+    "CL_SL_CM_laundry_services_detail": "Добро пожаловать! Ответьте на следующие вопросы, чтобы помочь нам порекомендовать лучшие программы стирки, которые улучшат ваши общие впечатления от стирки.",
+    "CL_SL_CM_recommended_program_guide": "Рекомендовать программу передач",
+    "CL_SL_CM_let's_get_started": "Давайте начнем!",
+    "CL_SL_CM_thank_you": "Спасибо!",
+    "CL_SL_CM_questionnaire_congratulations": "Поздравляем с заполнением анкеты, на основании анкеты мы порекомендуем вам подходящую программу стирки, пожалуйста, отметьте галочкой поле «Рекомендуется».",
+    "CL_DV_OV_light_setting_desc": "Включите или выключите освещение духовки. Вы можете изменить цвет и длительность в меню настроек освещения.",
+    "CL_DV_OV_lock_setting_desc": "С помощью блокировки вы отключаете сенсорный экран.",
+    "CL_DV_OV_eco_setting_desc": "Помогает снизить энергопотребление и сэкономить электричество.",
+    "CL_DV_OV_night_mode_setting_desc": "Уменьшите яркость экрана и/или освещение в течение запланированных ночных часов.",
+    "CL_DV_OV_door_lock_setting_desc": "Включение блокировки дверцы заблокирует дверцу вашей духовки.",
+    "CL_CF_FM_one_day_left": "Остался 1 день",
+    "CL_CF_FM_x_item_selected": "*** выбран элемент"
 }
