--- a/language/i18n_sk.json
+++ b/language/i18n_sk.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "Nižšie teploty sú štatisticky energeticky účinnejšie, takže možno budete chcieť nabudúce skúsiť nižšiu teplotu vody.",
     "add_appliance_connect_wifi_atos": "Pripojte sa k sieti „ConnectLife“ v nastaveniach Wi-Fi svojho smartfónu.\n\nUkončite aplikáciu ConnectLife a prejdite do nastavení Wi-Fi smartfónu. Pripojte sa k sieti „ConnectLife“, zadajte heslo „ConnectLife“ a vráťte sa do aplikácie.",
     "after_sale_report_failed_desc_new": "Vyskytla sa neočakávaná chyba a problém nebolo možné nahlásiť.",
-    "CL_DV_RF_sf_remaining": "Momentálne super zmrazené so zostávajúcimi ** min."
+    "CL_DV_RF_sf_remaining": "Momentálne super zmrazené so zostávajúcimi ** min.",
+    "CL_SL_CM_library_title": "Knižnica práčovne",
+    "CL_SL_CM_how_to_wash": "Ako sa umývať",
+    "CL_SL_CM_how_to_care": "Ako sa starať",
+    "CL_SL_CM_how_to_wash_detail": "Naučí vás prať rôzne druhy odevov, ako je hodváb, vlna, koža a páperové bundy atď.",
+    "CL_SL_CM_how_to_care_detail": "Naučí vás, ako sa starať o rôzne druhy oblečenia, ako je hodváb, vlna, koža a páperové bundy atď.",
+    "CL_SL_CM_articles": "články",
+    "CL_SL_CM_assistant_title": "Pomocník pri praní",
+    "CL_SL_CM_ai_wash_dry": "AI Wash & Dry",
+    "CL_SL_CM_drum_cleaning_subtitle": "Po mnohých praniach zvážte čistenie bubna, aby ste zlepšili výsledky bielizne.",
+    "CL_SL_CM_recommended_about": "O odporúčanom",
+    "CL_SL_CM_recommended_about_detail": "Tieto programy sú založené na vašich každodenných zvykoch a dotazníkoch.",
+    "CL_SL_CM_redo_the_questionnaire": "ZNOVU SI DOTAZNÍK",
+    "CL_SL_CM_laundry_title": "Práčovňa",
+    "CL_SL_CM_laundry_services_title": "Personalizované služby práčovne",
+    "CL_SL_CM_laundry_services_detail": "Vitajte! Odpovedzte na nasledujúce otázky, ktoré nám pomôžu pri odporúčaní lepších programov prania, čím sa zlepší váš celkový zážitok z prania.",
+    "CL_SL_CM_recommended_program_guide": "Odporučiť programového sprievodcu",
+    "CL_SL_CM_let's_get_started": "Začnime!",
+    "CL_SL_CM_thank_you": "Ďakujeme!",
+    "CL_SL_CM_questionnaire_congratulations": "Blahoželáme k vyplneniu dotazníka, na základe dotazníka vám odporučíme vhodný program prania, začiarknite ho v časti „Odporúčame“.",
+    "CL_DV_OV_light_setting_desc": "Zapnite alebo vypnite osvetlenie rúry. Farbu a trvanie môžete zmeniť v ponuke nastavení svetla.",
+    "CL_DV_OV_lock_setting_desc": "Zámkom vypnete dotykovú obrazovku.",
+    "CL_DV_OV_eco_setting_desc": "Pomáha znížiť spotrebu energie a šetriť elektrinu.",
+    "CL_DV_OV_night_mode_setting_desc": "Znížte jas displeja a/alebo svetlo počas plánovaných nočných hodín.",
+    "CL_DV_OV_door_lock_setting_desc": "Zapnutím zámku dvierok uzamknete dvierka vašej rúry.",
+    "CL_CF_FM_one_day_left": "Zostáva 1 deň",
+    "CL_CF_FM_x_item_selected": "*** vybratá položka"
 }
