--- a/language/i18n_sl.json
+++ b/language/i18n_sl.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "Nižje temperature so statistično bolj energetsko učinkovite, zato boste naslednjič morda želeli poskusiti z nižjo temperaturo vode.",
     "add_appliance_connect_wifi_atos": "Povežite se z omrežjem »ConnectLife« v nastavitvah Wi-Fi vašega pametnega telefona.\n\nZaprite aplikacijo ConnectLife in pojdite na nastavitve Wi-Fi vašega pametnega telefona. Povežite se z omrežjem »ConnectLife«, vnesite geslo »ConnectLife« in se vrnite v aplikacijo.",
     "after_sale_report_failed_desc_new": "Prišlo je do nepričakovane napake in težave ni bilo mogoče prijaviti.",
-    "CL_DV_RF_sf_remaining": "Trenutno v super zamrznjenem stanju s preostalimi ** min."
+    "CL_DV_RF_sf_remaining": "Trenutno v super zamrznjenem stanju s preostalimi ** min.",
+    "CL_SL_CM_library_title": "Knjižnica perila",
+    "CL_SL_CM_how_to_wash": "Kako umiti",
+    "CL_SL_CM_how_to_care": "Kako skrbeti",
+    "CL_SL_CM_how_to_wash_detail": "Naučite se prati različne vrste oblačil, kot so svila, volna, usnje, puhovke itd.",
+    "CL_SL_CM_how_to_care_detail": "Naučite se skrbeti za različne vrste oblačil, kot so svila, volna, usnje, puhovke itd.",
+    "CL_SL_CM_articles": "članki",
+    "CL_SL_CM_assistant_title": "Pomočnik v pralnici",
+    "CL_SL_CM_ai_wash_dry": "AI pranje in sušenje",
+    "CL_SL_CM_drum_cleaning_subtitle": "Po številnih pranjih razmislite o čiščenju bobna, da izboljšate rezultate pranja.",
+    "CL_SL_CM_recommended_about": "Približno priporočljivo",
+    "CL_SL_CM_recommended_about_detail": "Ti programi temeljijo na vaših dnevnih navadah in vprašalnikih.",
+    "CL_SL_CM_redo_the_questionnaire": "PONOVI VPRAŠALNIK",
+    "CL_SL_CM_laundry_title": "Pralnica",
+    "CL_SL_CM_laundry_services_title": "Prilagojene storitve pranja perila",
+    "CL_SL_CM_laundry_services_detail": "Dobrodošli! Odgovorite na naslednja vprašanja, da nam pomagate pri priporočanju boljših programov pranja perila in tako izboljšate svojo splošno izkušnjo pranja perila.",
+    "CL_SL_CM_recommended_program_guide": "Priporočite programski vodnik",
+    "CL_SL_CM_let's_get_started": "Pa začnimo!",
+    "CL_SL_CM_thank_you": "Hvala!",
+    "CL_SL_CM_questionnaire_congratulations": "Čestitamo za izpolnjen vprašalnik, na podlagi vprašalnika vam bomo priporočili ustrezen program pranja perila, preverite v \"Priporočeno\".",
+    "CL_DV_OV_light_setting_desc": "VKLOPITE ali IZKLOPITE luči v pečici. Barvo in trajanje lahko spremenite v meniju z nastavitvami svetlobe.",
+    "CL_DV_OV_lock_setting_desc": "S ključavnico onemogočite zaslon na dotik.",
+    "CL_DV_OV_eco_setting_desc": "Pomaga zmanjšati porabo energije in prihraniti elektriko.",
+    "CL_DV_OV_night_mode_setting_desc": "Zmanjšajte svetlost zaslona in/ali osvetlitev med načrtovanimi nočnimi urami.",
+    "CL_DV_OV_door_lock_setting_desc": "Če vklopite zaklepanje vrat, se zaklenejo vrata vaše pečice.",
+    "CL_CF_FM_one_day_left": "še 1 dan",
+    "CL_CF_FM_x_item_selected": "*** izbran artikel"
 }
