--- a/language/i18n_sv.json
+++ b/language/i18n_sv.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "Lägre temperaturer är statistiskt sett mer energieffektiva, så du kanske vill prova en lägre vattentemperatur nästa gång.",
     "add_appliance_connect_wifi_atos": "Anslut till nätverket \"ConnectLife\" i din smartphones Wi-Fi-inställningar.\n\nAvsluta ConnectLife-appen och gå till din smartphones Wi-Fi-inställningar. Anslut till nätverket \"ConnectLife\", skriv in lösenordet \"ConnectLife\" och återgå till appen.",
     "after_sale_report_failed_desc_new": "Ett oväntat fel uppstod och problemet kunde inte rapporteras.",
-    "CL_DV_RF_sf_remaining": "För närvarande i superfrys med ** min kvar."
+    "CL_DV_RF_sf_remaining": "För närvarande i superfrys med ** min kvar.",
+    "CL_SL_CM_library_title": "Tvättbibliotek",
+    "CL_SL_CM_how_to_wash": "Hur man tvättar",
+    "CL_SL_CM_how_to_care": "Hur man bryr sig",
+    "CL_SL_CM_how_to_wash_detail": "Lär dig hur du tvättar olika typer av kläder som siden, ull, läder och dunjackor, etc.",
+    "CL_SL_CM_how_to_care_detail": "Lär dig hur du tar hand om olika typer av kläder som siden, ull, läder och dunjackor, etc.",
+    "CL_SL_CM_articles": "artiklar",
+    "CL_SL_CM_assistant_title": "Tvättbiträde",
+    "CL_SL_CM_ai_wash_dry": "AI tvätta och torka",
+    "CL_SL_CM_drum_cleaning_subtitle": "Efter många tvättar, överväg att tvätta trummor för att förbättra tvättresultatet.",
+    "CL_SL_CM_recommended_about": "Om rekommenderas",
+    "CL_SL_CM_recommended_about_detail": "Dessa program är baserade på dina dagliga vanor och frågeformulär.",
+    "CL_SL_CM_redo_the_questionnaire": "GÖR OM FRÅGEFORMULÄRET",
+    "CL_SL_CM_laundry_title": "Tvätt",
+    "CL_SL_CM_laundry_services_title": "Personlig tvättservice",
+    "CL_SL_CM_laundry_services_detail": "Välkomna! Svara på följande frågor för att hjälpa oss att rekommendera bättre tvättprogram, vilket förbättrar din totala tvättupplevelse.",
+    "CL_SL_CM_recommended_program_guide": "Rekommendera programguide",
+    "CL_SL_CM_let's_get_started": "Låt oss komma igång!",
+    "CL_SL_CM_thank_you": "Tack!",
+    "CL_SL_CM_questionnaire_congratulations": "Grattis till att du har fyllt i frågeformuläret, vi kommer att rekommendera dig lämpligt tvättprogram baserat på frågeformuläret, kolla i \"Rekommenderas\".",
+    "CL_DV_OV_light_setting_desc": "Slå PÅ eller AV dina ugnslampor. Du kan ändra färg och varaktighet i ljusinställningsmenyn.",
+    "CL_DV_OV_lock_setting_desc": "Med låset inaktiverar du pekskärmen.",
+    "CL_DV_OV_eco_setting_desc": "Hjälper till att minska energiförbrukningen och spara el.",
+    "CL_DV_OV_night_mode_setting_desc": "Minska skärmens ljusstyrka och/eller ljuset under schemalagda nattimmar.",
+    "CL_DV_OV_door_lock_setting_desc": "Om du slår på dörrlåset låser du dörren till din ugn.",
+    "CL_CF_FM_one_day_left": "1 dag kvar",
+    "CL_CF_FM_x_item_selected": "*** objekt valt"
 }
