--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "ตามสถิติแล้วอุณหภูมิที่ต่ำกว่าจะมีประสิทธิภาพในการประหยัดพลังงานมากกว่า ดังนั้น คุณอาจลองใช้อุณหภูมิน้ำที่ต่ำกว่าในครั้งต่อไปก็ได้",
     "add_appliance_connect_wifi_atos": "เชื่อมต่อกับเครือข่าย “ConnectLife” ในการตั้งค่า Wi-Fi ของสมาร์ทโฟน\n\nออกจากแอป ConnectLife แล้วไปที่การตั้งค่า Wi-Fi ของสมาร์ทโฟน เชื่อมต่อกับเครือข่าย “ConnectLife” พิมพ์รหัสผ่าน “ConnectLife” แล้วกลับไปที่แอป",
     "after_sale_report_failed_desc_new": "เกิดข้อผิดพลาดที่ไม่คาดคิดและไม่สามารถรายงานปัญหาได้",
-    "CL_DV_RF_sf_remaining": "ขณะนี้อยู่ในช่วงแช่แข็งสุดๆ เหลือเวลาอีก ** นาที"
+    "CL_DV_RF_sf_remaining": "ขณะนี้อยู่ในช่วงแช่แข็งสุดๆ เหลือเวลาอีก ** นาที",
+    "CL_SL_CM_library_title": "ห้องสมุดซักรีด",
+    "CL_SL_CM_how_to_wash": "วิธีการซัก",
+    "CL_SL_CM_how_to_care": "วิธีการดูแลรักษา",
+    "CL_SL_CM_how_to_wash_detail": "สอนวิธีการซักเสื้อผ้าประเภทต่างๆ เช่น ผ้าไหม ผ้าขนสัตว์ หนัง และเสื้อแจ็กเก็ตขนเป็ด เป็นต้น",
+    "CL_SL_CM_how_to_care_detail": "สอนวิธีดูแลรักษาเสื้อผ้าประเภทต่างๆ เช่น ผ้าไหม ผ้าขนสัตว์ หนัง และเสื้อแจ็กเก็ตขนเป็ด เป็นต้น",
+    "CL_SL_CM_articles": "บทความ",
+    "CL_SL_CM_assistant_title": "ผู้ช่วยซักรีด",
+    "CL_SL_CM_ai_wash_dry": "ระบบ AI Wash & Dry",
+    "CL_SL_CM_drum_cleaning_subtitle": "หลังการซักหลายครั้ง โปรดพิจารณาทำความสะอาดถังซักเพื่อให้การซักผ้ามีประสิทธิภาพยิ่งขึ้น",
+    "CL_SL_CM_recommended_about": "เกี่ยวกับการแนะนำ",
+    "CL_SL_CM_recommended_about_detail": "โปรแกรมเหล่านี้จะขึ้นอยู่กับนิสัยและแบบสอบถามประจำวันของคุณ",
+    "CL_SL_CM_redo_the_questionnaire": "ทำแบบสอบถามใหม่",
+    "CL_SL_CM_laundry_title": "ซักรีด",
+    "CL_SL_CM_laundry_services_title": "บริการซักรีดเฉพาะบุคคล",
+    "CL_SL_CM_laundry_services_detail": "ยินดีต้อนรับ! โปรดตอบคำถามต่อไปนี้เพื่อช่วยเราในการแนะนำโปรแกรมซักผ้าที่ดีกว่า เพื่อปรับปรุงประสบการณ์การซักผ้าโดยรวมของคุณ",
+    "CL_SL_CM_recommended_program_guide": "แนะนำโปรแกรมแนะนำ",
+    "CL_SL_CM_let's_get_started": "มาเริ่มกันเลย!",
+    "CL_SL_CM_thank_you": "ขอบคุณ!",
+    "CL_SL_CM_questionnaire_congratulations": "ขอแสดงความยินดีที่ตอบแบบสอบถามเสร็จเรียบร้อยแล้ว เราจะแนะนำโปรแกรมซักผ้าที่เหมาะสมให้กับคุณตามแบบสอบถาม โปรดตรวจสอบในช่อง \"แนะนำ\"",
+    "CL_DV_OV_light_setting_desc": "เปิดหรือปิดไฟเตาอบของคุณ คุณสามารถเปลี่ยนสีและระยะเวลาในการตั้งค่าไฟได้ในเมนูการตั้งค่าไฟ",
+    "CL_DV_OV_lock_setting_desc": "ด้วยการล็อค คุณสามารถปิดการใช้งานหน้าจอสัมผัสได้",
+    "CL_DV_OV_eco_setting_desc": "ช่วยลดการใช้พลังงานและประหยัดไฟฟ้า",
+    "CL_DV_OV_night_mode_setting_desc": "ลดความสว่างของหน้าจอและ/หรือแสงในช่วงเวลากลางคืนที่กำหนดไว้",
+    "CL_DV_OV_door_lock_setting_desc": "การเปิดตัวล็อคประตูจะล็อคประตูเตาอบของคุณ",
+    "CL_CF_FM_one_day_left": "เหลืออีก 1 วัน",
+    "CL_CF_FM_x_item_selected": "*** รายการที่เลือก"
 }
