--- a/language/i18n_tr.json
+++ b/language/i18n_tr.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "Daha düşük sıcaklıklar istatistiksel olarak daha fazla enerji tasarrufu sağlar, bu nedenle bir dahaki sefere daha düşük bir su sıcaklığı denemek isteyebilirsiniz.",
     "add_appliance_connect_wifi_atos": "Akıllı telefonunuzun Wi-Fi ayarlarında \"ConnectLife\" ağına bağlanın.\n\nConnectLife uygulamasından çıkın ve akıllı telefonunuzun Wi-Fi ayarlarına gidin. \"ConnectLife\" ağına bağlanın, \"ConnectLife\" parolasını yazın ve uygulamaya geri dönün.",
     "after_sale_report_failed_desc_new": "Beklenmeyen bir hata oluştu ve sorun bildirilemedi.",
-    "CL_DV_RF_sf_remaining": "Şu anda süper dondurmada, ** dakika kaldı."
+    "CL_DV_RF_sf_remaining": "Şu anda süper dondurmada, ** dakika kaldı.",
+    "CL_SL_CM_library_title": "Çamaşırhane kütüphanesi",
+    "CL_SL_CM_how_to_wash": "Nasıl yıkanır",
+    "CL_SL_CM_how_to_care": "Nasıl bakım yapılır",
+    "CL_SL_CM_how_to_wash_detail": "İpek, yün, deri ve kuş tüyü montlar gibi farklı giysi türlerinin nasıl yıkanacağını öğreteceğiz.",
+    "CL_SL_CM_how_to_care_detail": "İpek, yün, deri, kuş tüyü mont gibi farklı giysi türlerinin bakımını nasıl yapacağınızı öğreteceğiz.",
+    "CL_SL_CM_articles": "makaleler",
+    "CL_SL_CM_assistant_title": "Çamaşırhane asistanı",
+    "CL_SL_CM_ai_wash_dry": "AI Yıkama ve Kurutma",
+    "CL_SL_CM_drum_cleaning_subtitle": "Çok sayıda yıkamadan sonra, çamaşır yıkama sonuçlarını iyileştirmek için lütfen tambur temizliğini göz önünde bulundurun.",
+    "CL_SL_CM_recommended_about": "Önerilen hakkında",
+    "CL_SL_CM_recommended_about_detail": "Bu programlar günlük alışkanlıklarınıza ve anketlerinize dayanmaktadır.",
+    "CL_SL_CM_redo_the_questionnaire": "ANKETİ TEKRAR YAPIN",
+    "CL_SL_CM_laundry_title": "Çamaşır",
+    "CL_SL_CM_laundry_services_title": "Kişiye özel çamaşırhane hizmetleri",
+    "CL_SL_CM_laundry_services_detail": "Hoş geldiniz! Daha iyi çamaşır yıkama programları önermemize ve genel çamaşır yıkama deneyiminizi geliştirmemize yardımcı olmak için aşağıdaki soruları yanıtlayın.",
+    "CL_SL_CM_recommended_program_guide": "Program rehberini öner",
+    "CL_SL_CM_let's_get_started": "Hadi başlayalım!",
+    "CL_SL_CM_thank_you": "Teşekkür ederim!",
+    "CL_SL_CM_questionnaire_congratulations": "Anketi tamamladığınız için tebrikler, ankete göre size uygun çamaşır yıkama programını önereceğiz, lütfen \"Önerilen\" kısmını işaretleyin.",
+    "CL_DV_OV_light_setting_desc": "Fırın ışıklarınızı AÇIN veya KAPATIN. Işık ayarları menüsünden rengi ve süreyi değiştirebilirsiniz.",
+    "CL_DV_OV_lock_setting_desc": "Kilit ile dokunmatik ekranı devre dışı bırakıyorsunuz.",
+    "CL_DV_OV_eco_setting_desc": "Enerji tüketimini azaltmaya ve elektrik tasarrufu yapmaya yardımcı olur.",
+    "CL_DV_OV_night_mode_setting_desc": "Planlanmış gece saatlerinde ekranın parlaklığını ve/veya ışığı azaltın.",
+    "CL_DV_OV_door_lock_setting_desc": "Kapı kilidini açtığınızda fırınınızın kapısı kilitlenecektir.",
+    "CL_CF_FM_one_day_left": "1 gün kaldı",
+    "CL_CF_FM_x_item_selected": "*** öğe seçildi"
 }
