--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "Нижчі температури є статистично більш енергоефективними, тому ви можете спробувати нижчу температуру води наступного разу.",
     "add_appliance_connect_wifi_atos": "Підключіться до мережі «ConnectLife» у налаштуваннях Wi-Fi свого смартфона.\n\nВийдіть із програми ConnectLife і перейдіть до налаштувань Wi-Fi свого смартфона. Підключіться до мережі «ConnectLife», введіть пароль «ConnectLife» і поверніться до програми.",
     "after_sale_report_failed_desc_new": "Сталася неочікувана помилка, про яку не вдалося повідомити.",
-    "CL_DV_RF_sf_remaining": "Зараз у режимі суперзаморожування, залишилося ** хв."
+    "CL_DV_RF_sf_remaining": "Зараз у режимі суперзаморожування, залишилося ** хв.",
+    "CL_SL_CM_library_title": "Бібліотека пральні",
+    "CL_SL_CM_how_to_wash": "Як прати",
+    "CL_SL_CM_how_to_care": "Як доглядати",
+    "CL_SL_CM_how_to_wash_detail": "Навчить вас прати різні типи одягу, такі як шовк, вовна, шкіра, пуховики тощо.",
+    "CL_SL_CM_how_to_care_detail": "Навчить вас доглядати за різними видами одягу, такими як шовк, вовна, шкіра, пуховики тощо.",
+    "CL_SL_CM_articles": "статті",
+    "CL_SL_CM_assistant_title": "Помічник пральні",
+    "CL_SL_CM_ai_wash_dry": "AI Wash & Dry",
+    "CL_SL_CM_drum_cleaning_subtitle": "Після багатьох прань подумайте про очищення барабана, щоб покращити результати прання.",
+    "CL_SL_CM_recommended_about": "Приблизно рекомендовано",
+    "CL_SL_CM_recommended_about_detail": "Ці програми базуються на ваших щоденних звичках і анкетах.",
+    "CL_SL_CM_redo_the_questionnaire": "ПЕРЕКОЛИТИ АНКЕТУ",
+    "CL_SL_CM_laundry_title": "Пральня",
+    "CL_SL_CM_laundry_services_title": "Індивідуальні послуги пральні",
+    "CL_SL_CM_laundry_services_detail": "Ласкаво просимо! Дайте відповіді на наступні запитання, щоб допомогти нам рекомендувати кращі програми прання, покращуючи загальний досвід прання.",
+    "CL_SL_CM_recommended_program_guide": "Рекомендуйте телегід",
+    "CL_SL_CM_let's_get_started": "Давайте почнемо!",
+    "CL_SL_CM_thank_you": "дякую!",
+    "CL_SL_CM_questionnaire_congratulations": "Вітаємо із заповненням анкети, ми порекомендуємо вам відповідну програму прання на основі анкети, будь ласка, перевірте в розділі «Рекомендовано».",
+    "CL_DV_OV_light_setting_desc": "Увімкніть або вимкніть світло духовки. Ви можете змінити колір і тривалість у меню налаштувань освітлення.",
+    "CL_DV_OV_lock_setting_desc": "За допомогою блокування ви вимикаєте сенсорний екран.",
+    "CL_DV_OV_eco_setting_desc": "Допомагає знизити споживання енергії та заощадити електрику.",
+    "CL_DV_OV_night_mode_setting_desc": "Зменшіть яскравість екрана та/або освітлення протягом запланованих нічних годин.",
+    "CL_DV_OV_door_lock_setting_desc": "Увімкнення блокування дверцят заблокує дверцята духовки.",
+    "CL_CF_FM_one_day_left": "залишився 1 день",
+    "CL_CF_FM_x_item_selected": "*** обраний елемент"
 }
