--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "Theo thống kê, nhiệt độ thấp hơn sẽ tiết kiệm năng lượng hơn, vì vậy bạn có thể thử nhiệt độ nước thấp hơn vào lần tới.",
     "add_appliance_connect_wifi_atos": "Kết nối với mạng “ConnectLife” trong cài đặt Wi-Fi trên điện thoại thông minh của bạn.\n\nThoát ứng dụng ConnectLife và đi tới cài đặt Wi-Fi trên điện thoại thông minh của bạn. Kết nối với mạng “ConnectLife”, nhập mật khẩu “ConnectLife” và quay lại ứng dụng.",
     "after_sale_report_failed_desc_new": "Đã xảy ra lỗi không mong muốn và không thể báo cáo sự cố.",
-    "CL_DV_RF_sf_remaining": "Hiện đang trong tình trạng siêu đông lạnh với ** phút còn lại."
+    "CL_DV_RF_sf_remaining": "Hiện đang trong tình trạng siêu đông lạnh với ** phút còn lại.",
+    "CL_SL_CM_library_title": "Thư viện giặt là",
+    "CL_SL_CM_how_to_wash": "Cách rửa",
+    "CL_SL_CM_how_to_care": "Cách chăm sóc",
+    "CL_SL_CM_how_to_wash_detail": "Dạy bạn cách giặt các loại quần áo khác nhau như lụa, len, da, áo khoác lông vũ, v.v.",
+    "CL_SL_CM_how_to_care_detail": "Dạy bạn cách chăm sóc các loại trang phục khác nhau như lụa, len, da, áo khoác lông vũ, v.v.",
+    "CL_SL_CM_articles": "bài viết",
+    "CL_SL_CM_assistant_title": "Trợ lý giặt là",
+    "CL_SL_CM_ai_wash_dry": "Giặt & Sấy AI",
+    "CL_SL_CM_drum_cleaning_subtitle": "Sau nhiều lần giặt, hãy cân nhắc vệ sinh lồng giặt để nâng cao hiệu quả giặt giũ.",
+    "CL_SL_CM_recommended_about": "Về đề xuất",
+    "CL_SL_CM_recommended_about_detail": "Các chương trình này dựa trên thói quen hàng ngày và bảng câu hỏi của bạn.",
+    "CL_SL_CM_redo_the_questionnaire": "LÀM LẠI BẢNG CÂU HỎI",
+    "CL_SL_CM_laundry_title": "Giặt ủi",
+    "CL_SL_CM_laundry_services_title": "Dịch vụ giặt là cá nhân",
+    "CL_SL_CM_laundry_services_detail": "Chào mừng! Trả lời các câu hỏi sau để giúp chúng tôi đề xuất các chương trình giặt ủi tốt hơn, nâng cao trải nghiệm giặt giũ tổng thể của bạn.",
+    "CL_SL_CM_recommended_program_guide": "Đề xuất hướng dẫn chương trình",
+    "CL_SL_CM_let's_get_started": "Chúng ta hãy bắt đầu nhé!",
+    "CL_SL_CM_thank_you": "Cảm ơn!",
+    "CL_SL_CM_questionnaire_congratulations": "Xin chúc mừng bạn đã hoàn thành bảng câu hỏi, chúng tôi sẽ đề xuất cho bạn chương trình giặt là phù hợp dựa trên bảng câu hỏi, vui lòng đánh dấu vào ô \"Đề xuất\".",
+    "CL_DV_OV_light_setting_desc": "Bật hoặc tắt đèn lò nướng. Bạn có thể thay đổi màu sắc và thời lượng trong menu cài đặt đèn.",
+    "CL_DV_OV_lock_setting_desc": "Khi khóa, bạn sẽ vô hiệu hóa màn hình cảm ứng.",
+    "CL_DV_OV_eco_setting_desc": "Giúp giảm tiêu thụ năng lượng và tiết kiệm điện.",
+    "CL_DV_OV_night_mode_setting_desc": "Giảm độ sáng của màn hình và/hoặc ánh sáng trong các giờ đêm được lên lịch.",
+    "CL_DV_OV_door_lock_setting_desc": "Bật khóa cửa sẽ khóa cửa lò nướng của bạn.",
+    "CL_CF_FM_one_day_left": "Còn 1 ngày nữa",
+    "CL_CF_FM_x_item_selected": "*** mục đã chọn"
 }
