--- a/language/i18n_zh.json
+++ b/language/i18n_zh.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "从统计数据来看，较低的温度更节能，因此下次您可能想尝试较低的水温。",
     "add_appliance_connect_wifi_atos": "在智能手机的 Wi-Fi 设置中连接到“ConnectLife”网络。 \n\n退出 ConnectLife 应用程序，转到智能手机的 WiFi 设置。连接到“ConnectLife”网络并输入密码“ConnectLife”，然后返回 ConnectLife 应用程序。",
     "after_sale_report_failed_desc_new": "发生了意外错误，无法报告该问题。",
-    "CL_DV_RF_sf_remaining": "目前处于超级冻结状态，剩余 ** 分钟。"
+    "CL_DV_RF_sf_remaining": "目前处于超级冻结状态，剩余 ** 分钟。",
+    "CL_SL_CM_library_title": "洗衣库",
+    "CL_SL_CM_how_to_wash": "如何清洗",
+    "CL_SL_CM_how_to_care": "如何护理",
+    "CL_SL_CM_how_to_wash_detail": "教您如何清洗不同类型的衣物，如丝绸、羊毛、皮革、羽绒服等。",
+    "CL_SL_CM_how_to_care_detail": "教您如何护理不同类型的服装，如丝绸、羊毛、皮革和羽绒服等。",
+    "CL_SL_CM_articles": "文章",
+    "CL_SL_CM_assistant_title": "洗衣助理",
+    "CL_SL_CM_ai_wash_dry": "人工智能洗涤和烘干",
+    "CL_SL_CM_drum_cleaning_subtitle": "多次洗涤后，请考虑清洁滚筒以提高洗衣效果。",
+    "CL_SL_CM_recommended_about": "关于推荐",
+    "CL_SL_CM_recommended_about_detail": "这些程序基于您的日常习惯和问卷调查。",
+    "CL_SL_CM_redo_the_questionnaire": "重新做问卷",
+    "CL_SL_CM_laundry_title": "洗衣店",
+    "CL_SL_CM_laundry_services_title": "个性化洗衣服务",
+    "CL_SL_CM_laundry_services_detail": "欢迎！回答以下问题可帮助我们推荐更好的洗衣方案，提升您的整体洗衣体验。",
+    "CL_SL_CM_recommended_program_guide": "推荐节目指南",
+    "CL_SL_CM_let's_get_started": "让我们开始吧！",
+    "CL_SL_CM_thank_you": "谢谢你！",
+    "CL_SL_CM_questionnaire_congratulations": "恭喜您完成问卷调查，我们将根据问卷调查结果为您推荐合适的洗衣方案，请在“推荐”处勾选。",
+    "CL_DV_OV_light_setting_desc": "打开或关闭烤箱灯。您可以在灯光设置菜单中更改颜色和持续时间。",
+    "CL_DV_OV_lock_setting_desc": "使用锁，您可以禁用触摸屏。",
+    "CL_DV_OV_eco_setting_desc": "协助降低能耗，节省电力。",
+    "CL_DV_OV_night_mode_setting_desc": "可以设置在晚间降低屏幕或灯光的亮度。",
+    "CL_DV_OV_door_lock_setting_desc": "打开门锁将会锁住烤箱的门。",
+    "CL_CF_FM_one_day_left": "还剩 1 天",
+    "CL_CF_FM_x_item_selected": "*** 已选择商品"
 }
