--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -4412,5 +4412,31 @@
     "CL_SL_CM_washing_temperature_detail": "Lavere temperaturer er statistisk sett mer energieffektive, så det kan være lurt å prøve en lavere vanntemperatur neste gang.",
     "add_appliance_connect_wifi_atos": "Koble til «ConnectLife»-nettverket i Wi-Fi-innstillingene på smarttelefonen.\n\nAvslutt ConnectLife-appen og gå til smarttelefonens Wi-Fi-innstillinger. Koble til \"ConnectLife\"-nettverket, skriv inn passordet \"ConnectLife\" og gå tilbake til appen.",
     "after_sale_report_failed_desc_new": "Det oppstod en uventet feil, og problemet kunne ikke rapporteres.",
-    "CL_DV_RF_sf_remaining": "For øyeblikket i superfrys med ** min igjen."
+    "CL_DV_RF_sf_remaining": "For øyeblikket i superfrys med ** min igjen.",
+    "CL_SL_CM_library_title": "Vaskeri bibliotek",
+    "CL_SL_CM_how_to_wash": "Hvordan vaske",
+    "CL_SL_CM_how_to_care": "Hvordan bry seg",
+    "CL_SL_CM_how_to_wash_detail": "Lær deg hvordan du vasker forskjellige typer klær som silke, ull, skinn og dunjakker osv.",
+    "CL_SL_CM_how_to_care_detail": "Lær deg hvordan du tar vare på forskjellige typer klær som silke, ull, skinn og dunjakker, etc.",
+    "CL_SL_CM_articles": "artikler",
+    "CL_SL_CM_assistant_title": "Vaskeassistent",
+    "CL_SL_CM_ai_wash_dry": "AI vask og tørk",
+    "CL_SL_CM_drum_cleaning_subtitle": "Etter mange vask bør du vurdere trommelrengjøring for å forbedre vaskeresultatene.",
+    "CL_SL_CM_recommended_about": "Anbefales omtrent",
+    "CL_SL_CM_recommended_about_detail": "Disse programmene er basert på dine daglige vaner og spørreskjemaer.",
+    "CL_SL_CM_redo_the_questionnaire": "GJØR SPØRRESKEMAET på nytt",
+    "CL_SL_CM_laundry_title": "Klesvask",
+    "CL_SL_CM_laundry_services_title": "Personlig klesvask",
+    "CL_SL_CM_laundry_services_detail": "Velkomst! Svar på følgende spørsmål for å hjelpe oss med å anbefale bedre vaskeprogrammer, noe som forbedrer din generelle klesvaskopplevelse.",
+    "CL_SL_CM_recommended_program_guide": "Anbefaler programguide",
+    "CL_SL_CM_let's_get_started": "La oss komme i gang!",
+    "CL_SL_CM_thank_you": "Takk!",
+    "CL_SL_CM_questionnaire_congratulations": "Gratulerer med å ha fullført spørreskjemaet, vi vil anbefale deg det riktige vaskeprogrammet basert på spørreskjemaet, vennligst sjekk i \"Anbefalt\".",
+    "CL_DV_OV_light_setting_desc": "Slå ovnslysene PÅ eller AV. Du kan endre farge og varighet i lysinnstillingsmenyen.",
+    "CL_DV_OV_lock_setting_desc": "Med låsen deaktiverer du berøringsskjermen.",
+    "CL_DV_OV_eco_setting_desc": "Hjelper med å redusere energiforbruket og spare strøm.",
+    "CL_DV_OV_night_mode_setting_desc": "Reduser lysstyrken på skjermen og/eller lyset i planlagte nattetimer.",
+    "CL_DV_OV_door_lock_setting_desc": "Hvis du slår på dørlåsen, låses døren til ovnen.",
+    "CL_CF_FM_one_day_left": "1 dag igjen",
+    "CL_CF_FM_x_item_selected": "*** element valgt"
 }
